--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -16,9 +16,16 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 {{en-noun}}
 
 # Any of the [[rodent]]s of the family [[Sciuridae]] distinguished by their large bushy tail.
-# {{Scientology|often|disparaging}} A [[freezoner]] or other who fails to apply L Ron Hubbard's technology as is considered appropriate.<ref>[http://cgi.amazing.com/scientology/dict.html Scientology Acronym/Terminology FAQ V2.6], amazing.com.</ref><ref>Joel Sappell and Robert W. Welkos, “[http://www.cs.cmu.edu/~dst/Library/Shelf/la90/la90-6e.html The Battle with the ‘Squirrels’: When the Doctrine Leaves the Church]”, ''Los Angeles Times'', 1990 June 29.</ref>
+# {{Scientology|often|disparaging}} 1. A [[freezoner]] or other who fails to apply L Ron Hubbard's technology as is considered appropriate.<ref>[http://cgi.amazing.com/scientology/dict.html Scientology Acronym/Terminology FAQ V2.6], amazing.com.</ref><ref>Joel Sappell and Robert W. Welkos, “[http://www.cs.cmu.edu/~dst/Library/Shelf/la90/la90-6e.html The Battle with the ‘Squirrels’: When the Doctrine Leaves the Church]”, ''Los Angeles Times'', 1990 June 29.</ref> 2. "those who engage in actions altering Scientology and offbeat practices." [official Scientology definition from Introduction to Scientology Ethics book. Also in Scientology Technical Dictionary.]
 # {{rfv-sense}} {{golf}} The completion of a hole with a score of nine (9).
 #: ''I got a '''squirrel''' on the last hole.''
+
+===verb===
+Squirrelling:
+
+"Squirreling is not really different processes -it is careless,incomplete, messed up auditing (counseling) procedure." [Official Scientology definition from Hubbard Communications Office Bulletin 15 Jan 70 II and from Scientology Technical Dictionary] Note: A person can be considered a squirrel, or to be squirreling, whether in or out of the Church of Scientology. The key is, are they applying the materials as Mr. Hubbard originally wrote them or are they not. This really has nothing to do with whether they are in or out of Scientology. The official definition of a Scientologist is, "one who betters the conditions of himself and the conditions of others by using Scientology technology." Scientology Technical Dictionary, from an Auditor magazine article, written by Hubbard. That's the complete criteria.
+
+
 
 ====Translations====
 {{trans-top|rodent}}
