--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -17,7 +17,7 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 
 # Any of the [[rodent]]s of the family [[Sciuridae]] distinguished by their large bushy tail.
 # {{Scientology|often|disparaging}} 1. A [[freezoner]] or other who fails to apply L Ron Hubbard's technology as is considered appropriate.<ref>[http://cgi.amazing.com/scientology/dict.html Scientology Acronym/Terminology FAQ V2.6], amazing.com.</ref><ref>Joel Sappell and Robert W. Welkos, “[http://www.cs.cmu.edu/~dst/Library/Shelf/la90/la90-6e.html The Battle with the ‘Squirrels’: When the Doctrine Leaves the Church]”, ''Los Angeles Times'', 1990 June 29.</ref> 
-# "those who engage in actions altering Scientology and offbeat practices." [official Scientology definition from Introduction to Scientology Ethics book. Also in Scientology Technical Dictionary.]
+# "those who engage in actions altering Scientology and offbeat practices." [official Scientology definition from Introduction to Scientology Ethics book. Also in Scientology Technical Dictionary.] "Freezoners consider that David Miscavige is actually the one squirreling the original Dianetics and Scientology processes."
 # {{rfv-sense}} {{golf}} The completion of a hole with a score of nine (9).
 #: ''I got a '''squirrel''' on the last hole.''
 
