--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -16,7 +16,7 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 {{en-noun}}
 
 # Any of the [[rodent]]s of the family [[Sciuridae]] distinguished by their large bushy tail.
-# {{Scientology|often|disparaging}} A person, usually a [[freezoner]], who applies L Ron Hubbard's technology in a heterodox manner.
+# {{Scientology|often|disparaging}} A person, usually a [[freezoner]], who applies L. Ron Hubbard's technology in a [[heterodox]] manner.
 # {{rfv-sense}} {{golf}} The completion of a hole with a score of nine (9).
 #: ''I got a '''squirrel''' on the last hole.''
 
