--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -392,6 +392,8 @@ From {{proto|Central-Eastern Malayo-Polynesian|əpat|lang=slu}}, from {{proto|Ma
 
 # {{cardinal|lang=slu}} {{l|en|four}}
 
+[[Category:slu:Four| ]]
+
 ----
 
 ==Serbo-Croatian==
