--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -426,6 +426,20 @@ From {{etyl|ota|sh}} {{term|آت|tr=at|sc=ota-Arab|lang=ota}}.
 
 ----
 
+==Simeulue==
+
+===Etymology===
+From {{proto|Western Malayo-Polynesian|əpat|lang=smr}}, from {{proto|Malayo-Polynesian|əpat|lang=smr}}, from {{proto|Austronesian|Səpat|lang=smr}}.
+
+===Numeral===
+{{head|smr|numeral}}
+
+# {{cardinal|lang=smr}} {{l|en|four}}
+
+[[Category:smr:Four| ]]
+
+----
+
 ==Tagalog==
 
 ===Pronunciation===
