--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -61,7 +61,11 @@ From {{etyl|ang}} ''[[bindan]]'', from {{proto|Germanic|bindanan}} (compare West
 #: ''certain drugs '''bind''' the bowels.''
 # {{transitive}} To put together in a cover, as of books.
 #: ''The three novels were '''bound''' together.''
-# {{transitive|computing}} To associate an [[identifier]] with a value; to associate a variable name with the content of a storage location. {{rfex}}
+# {{transitive|computing}} To associate an [[identifier]] with a value; to associate a variable name, method name, etc. with the content of a storage location.
+#* '''2008''', Bryan O'Sullivan, John Goerzen, Donald Bruce Stewart, ''Real World Haskell'' (page 33)
+#*: We '''bind''' the variable <code>n</code> to the value <code>2</code>, and <code>xs</code> to <code>"abcd"</code>.
+#* '''2009''', Robert Pickering, ''Beginning F#'' (page 123)
+#*: You can '''bind''' an identifier to an object of a derived type, as you did earlier when you bound a string to an identifier of type <code>obj</code>{{...}}
 
 ====Synonyms====
 * {{sense|''transitive'' tie or fasten together}} [[fetter]], [[make fast]], [[tie]], [[fasten]], [[restrain]]
