--- a/en/m/Mother's Night.741880.wikitext
+++ b/en/m/Mother's Night.741880.wikitext
@@ -1,9 +1,12 @@
 ==English==
 
+===Etymology===
+A calque, or perhaps a continuation, of {{etyl|ang}} {{term|Modraniht|Mōdraniht|lang=ang}}.
+
 ===Proper noun===
 {{en-proper noun}}
 
-# A [[Anglo-Saxon]] midwinter feast recorded by Bede, or a modern version of this festival celebrated by some [[Heathen]]s.
+# A [[Anglo-Saxon]] midwinter feast recorded by [[w:Bede|Bede]], or a modern version of this festival celebrated by some [[Heathen]]s.
 #* '''2005''', Galina Krasskova, ''Exploring the Northern Tradition'' (Career Press Inc., ISBN 1-56414-791-6), page 181:
 #*: The most sacred and important of all Heathen holy celebrations falls within this span of time and is called Modraniht or '''Mother's Night'''.
 
