==English==    ===Etymology===  {{etyl|la}} {{lena}} {{term|convocatus|lang=la}}, past participle of {{term|convocare|lang=la}} to convocate.    ===Verb===  {{en-verb|convocat|ed}}    # {{obsolete|transitive}} To [[convoke]]; to [[call]] [[together]].  #: <convocate#18133903>

--- a/en/c/convocate.776403.wikitext
+++ b/en/c/convocate.776403.wikitext
@@ -1,3 +1,18 @@
+==English==
+
+===Etymology===
+{{etyl|la}} {{lena}} {{term|convocatus|lang=la}}, past participle of {{term|convocare|lang=la}} to convocate.
+
+===Verb===
+{{en-verb|convocat|ed}}
+
+# {{obsolete|transitive}} To [[convoke]]; to [[call]] [[together]].
+#: {{rfquotek|May (Lucan)}}
+
+{{Webster 1913}}
+
+----
+
 ==Italian==
 
 ===Verb===
