--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -54,7 +54,7 @@ From {{etyl|enm}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{etyl|a
 * Bulgarian: {{t+|bg|гега|f}}
 * Finnish: [[käyräsauva]]
 * French: {{t+|fr|houlette|f}}
-* {{trreq|Georgian}}
+* Georgian: {{t|ka|კავი|sc=Geor|tr=kavi}}
 {{trans-mid}}
 * German: [[Hirtenstab]] {{m}}, [[Krummstab]] {{m}}
 * Greek: {{t+|el|γκλίτσα|f|tr=gklítsa}}
