t+ca:[[sostracció]] ([[WT:EDIT|Assisted]]) <subtraction#18159298>

--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -40,6 +40,7 @@
 {{trans-bottom}}
 
 {{trans-top|calculation}}
+* Catalan: {{t|ca|sostracció|f}}
 * Dutch: {{t+|nl|aftrekking|f}}
 * Esperanto: {{t-|eo|subtraho}}
 * Hungarian: {{t+|hu|kivonás}}
