--- a/en/l/least weasel.8233.wikitext
+++ b/en/l/least weasel.8233.wikitext
@@ -28,7 +28,7 @@
 * Friulian: [[bilite]]
 * Galician: [[donicela]], [[denociña]]
 * German: {{t+|de|Wiesel|n}}
-* Greek: [[νυφίτσα]] {{f}}
+* Greek: {{t|el|νυφίτσα|f|tr=nyfítsa|sc=Grek}}
 * Hungarian: {{t+|hu|menyét}}
 * Icelandic: {{t+|is|hreysiköttur}}, {{t-|is|vesla}}
 * Irish: {{t-|ga|bláthnaid ghallda|f}}
