--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -28,6 +28,7 @@ The verb comes from the supposed cunningness of the weasel.
 
 ====Translations====
 {{trans-top|least weasel, ''Mustela nivalis''}}
+* Algonquin: {{tø|alq|cigosi}}
 * Armenian: {{t-|hy|աքիս|tr=ak'is}}
 * Basque: {{t+|eu|erbinude}}
 * Belarusian: {{t-|be|ласка|f|tr=láska|sc=Cyrl}}
@@ -47,8 +48,8 @@ The verb comes from the supposed cunningness of the weasel.
 * Hebrew: {{t-|he|סמור|sc=Hebr|tr=samur}}
 * Hungarian: {{t+|hu|menyét}}
 * Irish: {{t-|ga|bláthnaid ghallda|f}}
-* Italian: {{t+|it|donnola|f}}
 {{trans-mid}}
+* Italian: {{t+|it|donnola|f}}
 * Japanese: {{t-|ja|イタチ|tr=itachi|sc=Jpan}}, {{t-|ja|鼬鼠|tr=いたち, itachi|sc=Jpan}}, {{t-|ja|飯綱|tr=いいずな, īzuna}}
 * Korean: {{t-|ko|족제비|tr=jokjebi|sc=Hang}}
 * Latgalian: {{tø|ltg|luoseica}}
