t+mk:[[одбројување]] ([[WT:EDIT|Assisted]]) <countdown#18166439>

--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -29,6 +29,7 @@
 * German: {{t+|de|Countdown|m}}
 * Hebrew: [[ספירה לאחור]] (sfira le'akhor) {{f}}
 * Italian: {{t-|it|conto alla rovescia|m}}
+* Macedonian: {{t|mk|одбројување|n|tr=odbrojúvanje|sc=Cyrl}}
 * Portuguese: {{t|pt|contagem regressiva}}
 * Russian: [[обратный отсчёт]] (obrátnyj otš'ót) {{m}}
 * Slovene: [[odštevanje]] {{n}}
