--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -61,6 +61,7 @@
 *: Mandarin: {{zh-ts|[[倒]][[數]]|[[倒]][[数]]}} ([[dào]][[shǔ]])
 * Dutch: [[aftellen]]
 {{trans-mid}}
+* Macedonian: {{t|mk|одбројува|tr=odbrójuva|sc=Cyrl}}
 * Portuguese: [[fazer]] a [[contagem regressiva]]
 * Slovene: [[odštevati]]
 {{trans-bottom}}
