--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -130,7 +130,7 @@ From {{term|meg}}
 ==Indonesian==
 
 ===Etymology===
-From {{etyl|ms|id}} {{term|mega|lang=ms}}, from {{etyl|sa|id}} {{term|मेघ||cloud|tr=megha|lang=sa}}.
+From {{etyl|ms|id}} {{term|mega|lang=ms}}, from {{etyl|sa|id}} {{term|मेघ|tr=megha|gloss=cloud|lang=sa}}.
 
 ===Noun===
 {{head|id|noun}}
@@ -145,7 +145,10 @@ From {{etyl|ms|id}} {{term|mega|lang=ms}}, from {{etyl|sa|id}} {{term|मेघ|
 ==Malay==
 
 ===Etymology===
-From {{etyl|sa|ms}} {{term|मेघ||cloud|tr=megha|lang=sa}}.
+From {{etyl|sa|ms}} {{term|मेघ|tr=megha|gloss=cloud|lang=sa}}.
+
+===Alternative forms===
+* {{l|ms|ميݢ|sc=Arab}}
 
 ===Pronunciation===
 * {{a|Johor-Selangor}} {{IPA|/megə/|lang=ms}}
@@ -158,7 +161,7 @@ From {{etyl|sa|ms}} {{term|मेघ||cloud|tr=megha|lang=sa}}.
 # [[cloud]] {{gloss|visible mass of water droplets suspended in the air}}
 
 ====Synonyms====
-* {{l|ms|awan}}
+* {{l|ms|awan}} / {{l|ms|اون|sc=Arab}}
 
 ----
 
