--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -64,6 +64,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Indonesian: {{t|id|saat itu}}
 * Italian: {{t+|it|allora}}
 * Japanese: {{t|ja|そのとき|tr=sono toki}} ({{t|ja|その時}}), {{t|ja|その時点|tr=そのじてん, sono jiten}}
+* {{trreq|Khmer}}
 * Kurdish: [[hingê]], [[wê]] [[dem|demê]], [[wî]] [[çax|çaxî]], wî [[wext|wextî]], wê [[gav|gavê]]
 * Latgalian: {{tø|ltg|tod}}, {{tø|ltg|tūlaik}}
 * Latin: {{t+|la|tum}}, {{t+|la|deinde}}, {{t+|la|tunc}}
@@ -90,9 +91,11 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Spanish: {{t+|es|entonces}}
 * Swedish: {{t+|sv|då}}
 * Telugu: [[అప్పుడు]] (appuDu)
+* Thai: {{t|th|ในตอนนั้น|tr=nai dton-nán|sc=Thai}}
 * Turkish: {{t|tr|sonra}}
 * Ukrainian: {{t|uk|тоді|tr=todí|sc=Cyrl}}
 * Urdu: {{t|ur|تب|tr=tab|sc=ur-Arab}}
+* Vietnamese: {{t|vi|khi ấy}}
 * Welsh: {{t|cy|bryd hynny|xs=Welsh}}
 {{trans-bottom}}
 
@@ -115,6 +118,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Irish: {{t|ga|i ndiadh sin}}
 * Italian: {{t+|it|poi}}
 * Japanese: {{t|ja|それから|tr=sorekara}}, {{t|ja|その後|tr=sono ato}}, {{t|ja|その後|tr=sono go}}, {{t-|ja|そして|tr=soshite}}
+* {{trreq|Khmer}}
 * Kurdish: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
 * Latin: {{t|la|deinde}}, {{t|la|exinde}}
 * Luxembourgish: {{t|lb|dunn}}
@@ -138,9 +142,11 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Spanish: {{t+|es|luego}}
 * Swedish: {{t+|sv|därpå}}, {{t+|sv|sen}}, {{t+|sv|sedan}}, {{t+|sv|så}}
 * Taos: [[yíane]]
+* Thai: {{t|th|แล้วก็|tr=láew gôr|sc=Thai}}
 * Tok Pisin: {{t|tpi|orait}}
 * Ukrainian: {{t|uk|потім|tr=pótim|sc=Cyrl}}
 * Urdu: {{t|ur|پھر|tr=phir|sc=ur-Arab}}
+* Vietnamese: {{t|vi|sau đó}}
 {{trans-bottom}}
 
 {{trans-top|next in order}}
