--- a/en/t/togue.855176.wikitext
+++ b/en/t/togue.855176.wikitext
@@ -6,16 +6,17 @@
 ===Noun===
 {{en-noun|togue}}
 
-# [[lake trout]] (''Salvelinus namaycush''), a freshwater [[char]] of northern North America.
+# [[lake trout|Lake trout]] (''Salvelinus namaycush''), a freshwater [[char]] of northern North America.
 
 ====Synonyms====
 * [[grey trout]]
 * [[lake char]]
 * [[mackinaw]]
 * [[touladi]]
+* [[namaycush]]
 
 ===References===
-Encarta® World English Dictionary [North American Edition]
+* Encarta World English Dictionary [North American Edition]
 
 [[Category:en:Fish]]
 
