--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -65,11 +65,12 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Italian: {{t+|it|allora}}
 * Japanese: {{t|ja|そのとき|tr=sono toki}} ({{t|ja|その時}}), {{t|ja|その時点|tr=そのじてん, sono jiten}}
 * {{trreq|Khmer}}
+* Korean: {{t|ko|그때|tr=geuttae|sc=Kore}}, {{t|ko|그 때|tr=geu ttae|sc=Kore}}
 * Kurdish: [[hingê]], [[wê]] [[dem|demê]], [[wî]] [[çax|çaxî]], wî [[wext|wextî]], wê [[gav|gavê]]
 * Latgalian: {{tø|ltg|tod}}, {{tø|ltg|tūlaik}}
 * Latin: {{t+|la|tum}}, {{t+|la|deinde}}, {{t+|la|tunc}}
-* Latvian: {{t|lv|tad}}
 {{trans-mid}}
+* Latvian: {{t|lv|tad}}
 * Lithuanian: {{t-|lt|tada|xs=Lithuanian}}
 * Macedonian: {{t|mk|тогаш|tr=tógaš|sc=Cyrl}}
 * Malay: [[pada masa yang sama]]
@@ -119,11 +120,12 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Italian: {{t+|it|poi}}
 * Japanese: {{t|ja|それから|tr=sorekara}}, {{t|ja|その後|tr=sono ato}}, {{t|ja|その後|tr=sono go}}, {{t-|ja|そして|tr=soshite}}
 * {{trreq|Khmer}}
+* Korean: {{t|ko|나중에|tr=najung-e|sc=Kore}}, {{t|ko|이후|tr=ihu|sc=Kore}}
 * Kurdish: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
 * Latin: {{t|la|deinde}}, {{t|la|exinde}}
 * Luxembourgish: {{t|lb|dunn}}
-* Macedonian: {{t|mk|потоа|tr=potoa|sc=Cyrl}}
 {{trans-mid}}
+* Macedonian: {{t|mk|потоа|tr=potoa|sc=Cyrl}}
 * Malay: [[tidak lama kemudian]]
 * Norwegian: {{t+|no|så}}, {{t|no|deretter}}, {{t+|no|siden}}
 * Old English: {{t-|ang|þa|alt=þā|xs=Old English}}
@@ -201,9 +203,10 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Hungarian: {{t+|hu|akkor}}
 * Italian: {{t+|it|allora}}
 * Japanese: {{t|ja|そのとき|tr=sonotoki}}, {{t-|ja|だから|tr=dakara}}
+* Korean: {{t|ko|그러면|tr=geureomyeon|sc=Kore}}
 * Kurdish: {{t+|ku|pa}}, {{t+|ku|de}}, {{t+|ku|madem}}
-* Latin: {{t|la|tunc}}, {{t|la|tum}}
 {{trans-mid}}
+* Latin: {{t|la|tunc}}, {{t|la|tum}}
 * Lithuanian: {{t-|lt|tada|xs=Lithuanian}}
 * Malay: [[oleh sebab yang demikian]]
 * Norwegian: {{t+|no|da}}, {{t|no|i så fall}}
