--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -119,7 +119,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Irish: {{t|ga|i ndiadh sin}}
 * Italian: {{t+|it|poi}}
 * Japanese: {{t|ja|それから|tr=sorekara}}, {{t|ja|その後|tr=sono ato}}, {{t|ja|その後|tr=sono go}}, {{t-|ja|そして|tr=soshite}}
-* {{trreq|Khmer}}
+* Khmer: {{t|km|រួចមក|tr=ruəc mɔɔk|sc=Khmr}}
 * Korean: {{t|ko|나중에|tr=najung-e|sc=Kore}}, {{t|ko|이후|tr=ihu|sc=Kore}}
 * Kurdish: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
 * Latin: {{t|la|deinde}}, {{t|la|exinde}}
