--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -6,7 +6,10 @@
 * {{audio|en-us-bet.ogg|Audio (US)}}
 * {{rhymes|ɛt}}
 
-===Noun===
+===Etymology 1===
+From 16th century criminal slang, likely from {{term|avet|lang=en}} or {{etyl|ang}} {{term|bætan|lang=ang||to make better}}.
+
+====Noun====
 {{en-noun}}
 
 # A [[wager]], an agreement between two parties that a stake (usually money) will be paid by the loser to the winner (the winner being the one who correctly forecast the outcome of an event).
@@ -15,7 +18,7 @@
 #: ''It’s a safe '''bet''' that it will rain tomorrow.''
 #: ''It’s an even '''bet''' that Jim will come top of the maths test tomorrow''
 
-====Translations====
+=====Translations=====
 {{trans-top|a wager}}
 * Basque: {{t-|eu|trabes|xs=Basque}}
 * Bulgarian: {{t+|bg|бас}}, {{t+|bg|облог|m}}
@@ -60,7 +63,7 @@
 *: Suzhou dialect: [[ruán-tondæ]]
 {{trans-bottom}}
 
-===Verb===
+====Verb====
 {{en-verb|bets|betting|'''bet '''or''' [[betted]]'''}}
 
 # To agree that payment be made to the successful forecaster of the result of an event (usually sporting) by the other party in the agreement. To make a [[guess]] about the [[outcome]] of an event.
@@ -68,7 +71,7 @@
 #: ''You '''bet'''!''
 # {{poker}} To place money into the [[pot]] in order to require others do the same, usually only used for the first person to place money in the pot on each round.
 
-====Translations====
+=====Translations=====
 {{trans-top|To make a guess about the outcome of an event}}
 * Arabic: {{t-|ar|راهن|tr=raahana}}
 * Basque: {{t-|eu|apustu egin|xs=Basque}}
@@ -128,6 +131,14 @@
 * {{ttbc|wuu}}:
 *: Suzhou dialect: [[ruánl tondæ]]
 {{trans-bottom}}
+
+===Etymology 2===
+From {{etyl|he}} {{term|בית|tr=béyt}}
+
+====Noun====
+{{en-noun|?}}
+
+# {{alterntaive form of|beth}}
 
 [[Category:English irregular verbs]]
 [[Category:English verbs with base form identical to past participle]]
