--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -7,7 +7,7 @@
 * {{rhymes|ɛt}}
 
 ===Etymology 1===
-From 16th century criminal slang, likely from {{term|avet|lang=en}} or {{etyl|ang}} {{term|bætan|lang=ang||to make better}}.
+From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|ang}} {{term|bætan|lang=ang||to make better}}.
 
 ====Noun====
 {{en-noun}}
