t+cmn:[[包紮]] t-balance t+cmn:[[包扎]] t+cmn:[[捆]] t+cmn:[[綁]] t+cmn:[[绑]] t+de:[[verbinden]] t+de:[[konnektieren]] t+fr:[[relier]] t+fr:[[lier]] ([[WT:EDIT|Assisted]]) <bind#18176292>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -84,18 +84,19 @@ From {{etyl|ang}} ''[[bindan]]'', from {{proto|Germanic|bindanan}} (compare West
 * Arabic: {{t-|ar|ربط|tr=rabaTa}}
 * Bulgarian: {{t+|bg|свързвам}}
 * Chinese: {{t-|cmn|捆|tr=kǔn|sc=Hani}}, {{t|cmn|包扎|tr=bāozā|sc=Hani}}, {{zh-tsp|綁|绑|bǎng}}
+*: Mandarin: {{t|cmn|包紮|sc=Hani}}, {{t|cmn|包扎|tr=bāozhā, bāozā|sc=Hani}}, {{t|cmn|捆|tr=kǔn|sc=Hani}}, {{t|cmn|綁|sc=Hani}}, {{t|cmn|绑|tr=bǎng|sc=Hani}}
 * Crimean Tatar: [[bint#Crimean Tatar|bint]]
 * Czech: [[vázat]] {{qualifier|by a promise}}
 * Dutch: {{t+|nl|binden}}, {{t+|nl|verbinden}}, {{t+|nl|koppelen}}
 * Esperanto: {{t+|eo|ligi}}
 * Finnish: {{t+|fi|sitoa}}, {{t+|fi|yhdistää}}
-* French: [[relier]] (livre)
-* German: [[verbinden]], [[konnektieren]]
+* French: [[relier]] (livre), {{t|fr|lier}} {{qualifier|book}}
+* German: [[verbinden]], [[konnektieren]], {{t|de|verbinden}}, {{t|de|konnektieren}}
 * Hungarian: {{t+|hu|összeköt}}
 * Ido: [[bindar]]
 * Indonesian: [[ikat]], [[sambung]], [[hubung]]
-* Italian: [[legare]]
 {{trans-mid}}
+* Italian: [[legare]]
 * Japanese: [[繋ぐ]] ([[つなぐ]], tsunagu), [[繋げる]] ([[つなげる]], tsunageru),  {{t-|ja|縛る|tr=shibaru}},  {{t-|ja|結ぶ|tr=musubu}}
 * Latin: {{t-|la|conecto|alt=cōnectō}},  {{t+|la|iungo|alt=iungō}},  {{t-|la|necto|alt=nectō}}, {{t+|la|teneo}}
 * Norwegian: {{t+|no|binde}}
@@ -125,9 +126,10 @@ From {{etyl|ang}} ''[[bindan]]'', from {{proto|Germanic|bindanan}} (compare West
 * Czech: {{t+|cs|svázat}}
 * Esperanto: {{t-|eo|bindi|xs=Esperanto}}
 * Finnish: {{t|fi|sitoa}}
+* French: {{t|fr|relier}}
 * German: {{qualifier|z.B. ein Buch}} {{t+|de|binden}}
-* Greek: {{t+|el|βιβλιοδετώ|tr=vivliodetó|sc=Grek}}
 {{trans-mid}}
+* Greek: {{t+|el|βιβλιοδετώ|tr=vivliodetó|sc=Grek}}
 * Italian: [[rilegare]]
 * Portuguese: {{t+|pt|encapar}}, {{t+|pt|encadernar}}
 * Russian: {{t+|ru|переплетать|tr=perepletát'|alt=переплета́ть}}, {{t+|ru|переплести|tr=pereplestí|alt=переплести́}}
