--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -81,7 +81,7 @@ From {{etyl|frm}} {{term|advertissement||statement calling attention|lang=frm}},
 * Navajo: {{tø|nv|óʼoolkąąh}}
 * Norwegian: {{t|no|reklame}} {{t|no|annonse}}
 * Persian: {{t|fa|تبلیغ|tr=tabliğ|sc=fa-Arab}}
-* Polish: {{t+|pl|ogłoszenie|n}}, {{t+|pl|reklama|f}}, {{t-|pl|anons|m}}
+* Polish: {{t+|pl|reklama|f}}
 * Portuguese: {{t+|pt|anúncio|m}}, {{t+|pt|publicidade|f}}, {{t+|pt|reclame|m}}, {{t+|pt|propaganda|f}}
 * Romanian: [[anunț]] {{n}} [[publicitate]] {{f}}, [[reclamă]] {{f}}
 * Russian: {{t+|ru|реклама|f|tr=rekláma}},  {{t+|ru|объявление|n|tr=ob”javlénije}},  {{t|ru|анонс|m|tr=anóns}},  {{t|ru|заявление|n|tr=zajavlénije}}
@@ -101,7 +101,7 @@ From {{etyl|frm}} {{term|advertissement||statement calling attention|lang=frm}},
 {{trans-bottom}}
 
 {{trans-top|public notice}}
-* Bulgarian: {{t|bg|обявление}},  {{t|bg|обява}}
+* Bulgarian: {{t|bg|обявление}}, {{t|bg|обява}}
 * Finnish: {{t|fi|ilmoitus}}
 * German: [[Anzeige]] {{f}}, [[Bekanntmachung]] {{f}}
 * Greek: {{t+|el|διαφήμιση|f|tr=diafimisi}}, {{t+|el|αγγελία|f|tr=agelía}}
@@ -109,6 +109,7 @@ From {{etyl|frm}} {{term|advertissement||statement calling attention|lang=frm}},
 *: Sorani: {{ku-Arab|[[بۆزانین]]}}
 * Macedonian: {{t|mk|оглас|m|tr=óglas}}
 {{trans-mid}}
+* Polish: {{t+|pl|ogłoszenie|n}}, {{t-|pl|anons|m}}
 * Portuguese: [[edital]] {{m}}
 * Romanian: {{t|ro|anunț |n}} (public)
 * Russian: {{t+|ru|объявление|n|tr=ob”javlénije}}, {{t|ru|анонс|m|tr=anóns}}, {{t|ru|извещение|n|tr=izveščénije}}
