--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -47,71 +47,71 @@ From {{etyl|frm}} {{term|advertissement||statement calling attention|lang=frm}},
 
 ====Translations====
 {{trans-top|commercial solicitation}}
-* Arabic: {{t|ar|إيذان|m|tr='idhaan}},  {{t|ar|إعلان|m|tr='i3laan}}
+* Arabic: {{t|ar|إيذان|m|tr='idhaan}}, {{t|ar|إعلان|m|tr='i3laan}}
 * Armenian: {{t-|hy|գովազդ|tr=govazd}}
-* Breton: [[bruderezh]] {{m}}
+* Breton: {{t|br|bruderezh|m}}
 * Bulgarian: {{t+|bg|реклама|f}}
-* Chinese:
+* Chinese: 
 *: Mandarin: {{t-|cmn|廣告|sc=Hani}},  {{t-|cmn|广告|tr=guǎnggào|sc=Hani}}
 * Croatian: {{t-|hr|reklama}}
 * Czech: {{t-|cs|reklama|f}}
 * Danish: {{t-|da|reklame}}
-* Dutch: [[reclame]] {{f}} {{m}}, [[advertentie]] {{f}}
+* Dutch: {{t|nl|reclame|f|m}}, {{t|nl|advertentie  |f}}
 * Esperanto: {{t-|eo|reklamo}}
 * Estonian: {{t-|et|reklaam}}, {{t+|et|propaganda}}, {{t-|et|kuulutus}}
-* Finnish: [[mainos]], [[mainostus]]
+* Finnish: {{t|fi|mainos}}, {{t|fi|mainostus}}
 * French: {{t+|fr|publicité|f}}, {{t+|fr|pub|f}}, {{t+|fr|annonce|f}}
-* German: [[Anzeige]] {{f}}, [[Werbung]] {{f}}, [[Annonce]] {{f}}, [[Reklameanzeige]] {{f}}
+* German: {{t|de|Anzeige|f}}, {{t|de|Werbung|f}}, {{t|de|Annonce|f}}, {{t|de|Reklameanzeige|f}}
 * Greek: {{t+|el|διαφήμιση|f|tr=diafimisi}}
 * Hebrew: {{t|he|פרסומת|f|tr=pirsomet}}
 * {{trreq|hi}}
 * Hungarian: {{t+|hu|hirdetés}}, {{t+|hu|reklám}}
 * Icelandic: {{t+|is|auglýsing|f}}
 * Indonesian: {{t+|id|iklan|xs=Indonesian}}, {{t-|id|reklame|xs=Indonesian}}
-* Interlingua: [[annuncio]], [[publicitate]], [[reclamo]], [[propaganda]]
+* Interlingua: {{t|ia|annuncio}}, {{t|ia|publicitate}}, {{t|ia|reclamo}}, {{t|ia|propaganda}}
 * Italian: {{t+|it|annuncio|m}}, {{t-|it|pubblicità|f}}
-* Japanese: {{t+|ja|広告|tr=こうこく, kōkoku}},  {{t-|ja|CM|tr=シーエム, shī-emu}}
+* Japanese: {{t+|ja|広告|tr=こうこく, kōkoku}}, {{t-|ja|CM|tr=シーエム, shī-emu}}
 * Korean: {{t+|ko|광고|tr=gwanggo|sc=Hang}} ({{t+|ko|廣告|sc=Hani}})
-* Latin: [[prescriptio]] {{f}} (-ionis)
+* Latin: {{t|la|prescriptio|f}}
 {{trans-mid}}
 * Lithuanian: {{t-|lt|reklama|xs=Lithuanian}}
 * Macedonian: {{t-|mk|реклама|f|tr=rekláma}}
 * Malay: {{t-|ms|iklan|xs=Malay}}
-* Maltese: [[riklam]], [[pubbliċità]], [[tgħarif kummerċjali]]
+* Maltese: {{t|mt|riklam}}, {{t|mt|pubbliċità}}, {{t|mt|tgħarif kummerċjali}}
 * Navajo: {{tø|nv|óʼoolkąąh}}
 * Norwegian: {{t|no|reklame}} {{t|no|annonse}}
 * Persian: {{t|fa|تبلیغ|tr=tabliğ|sc=fa-Arab}}
 * Polish: {{t+|pl|reklama|f}}
 * Portuguese: {{t+|pt|anúncio|m}}, {{t+|pt|publicidade|f}}, {{t+|pt|reclame|m}}, {{t+|pt|propaganda|f}}
-* Romanian: [[anunț]] {{n}} [[publicitate]] {{f}}, [[reclamă]] {{f}}
-* Russian: {{t+|ru|реклама|f|tr=rekláma}},  {{t+|ru|объявление|n|tr=ob”javlénije}},  {{t|ru|анонс|m|tr=anóns}},  {{t|ru|заявление|n|tr=zajavlénije}}
+* Romanian: {{t|ro|anunț|n}}  [[publicitate]] {{f}}, {{t|ro|reclamă|f}}
+* Russian: {{t+|ru|реклама|f|tr=rekláma}}, {{t+|ru|объявление|n|tr=ob”javlénije}}, {{t|ru|анонс|m|tr=anóns}}, {{t|ru|заявление|n|tr=zajavlénije}}
 * Scottish Gaelic: {{t|gd|sanas-reic|m}}
-* Serbian: [[oglas]], [[objavljenje]], [[izveštenje]]
+* Serbian: {{t|sr|oglas}}, {{t|sr|objavljenje}}, {{t|sr|izveštenje}}
 * Slovene: {{t+|sl|oglas|m}}, {{t-|sl|reklama|f}}
 * Spanish: {{t-|es|anuncio|m}}, {{t+|es|publicidad|f}}, {{t+|es|reclamo|m}}
 * Swedish: {{t|sv|annons}}, {{t|sv|annonsering}}, {{t|sv|reklam}}
 * Tamil: {{t|ta|விளம்பரம்|xs=Tamil}}
-* Telugu: [[వ్యాపార ప్రకటన]]
+* Telugu: {{t|te|వ్యాపార ప్రకటన}}
 * Thai: {{t|th|การโฆษณา|tr=gaan kôhtsànaa|sc=Thai}}
 * Turkish: {{t+|tr|reklam}}, {{t+|tr|ilan}}, {{t+|tr|duyuru}}
 * Vietnamese: {{t+|vi|quảng cáo|xs=Vietnamese}} ({{t-|vi|廣告|sc=Hani|xs=Vietnamese}}), {{t+|vi|giới thiệu|xs=Vietnamese}}
-* Volapük: [[noted]], [[reklam]], [[nunam]]
-* West Frisian: [[advertinsje]], [[oankundiging]]
+* Volapük: {{t|vo|noted}}, {{t|vo|reklam}}, {{t|vo|nunam}}
+* West Frisian: {{t|fy|advertinsje}}, {{t|fy|oankundiging}}
 * Yiddish: {{t|yi|רעקלאַמע|f|tr=reklame|sc=Hebr}}
 {{trans-bottom}}
 
 {{trans-top|public notice}}
 * Bulgarian: {{t|bg|обявление}}, {{t|bg|обява}}
 * Finnish: {{t|fi|ilmoitus}}
-* German: [[Anzeige]] {{f}}, [[Bekanntmachung]] {{f}}
+* German: {{t|de|Anzeige|f}}, {{t|de|Bekanntmachung|f}}
 * Greek: {{t+|el|διαφήμιση|f|tr=diafimisi}}, {{t+|el|αγγελία|f|tr=agelía}}
-* Kurdish:
+* Kurdish: 
 *: Sorani: {{ku-Arab|[[بۆزانین]]}}
 * Macedonian: {{t|mk|оглас|m|tr=óglas}}
 {{trans-mid}}
 * Polish: {{t+|pl|ogłoszenie|n}}, {{t-|pl|anons|m}}
-* Portuguese: [[edital]] {{m}}
-* Romanian: {{t|ro|anunț |n}} (public)
+* Portuguese: {{t|pt|edital|m}}
+* Romanian: {{t|ro|anunț|n}} (public)
 * Russian: {{t+|ru|объявление|n|tr=ob”javlénije}}, {{t|ru|анонс|m|tr=anóns}}, {{t|ru|извещение|n|tr=izveščénije}}
 {{trans-bottom}}
 
