--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -17,24 +17,25 @@
 * Bengali: {{t|bn|চতুর্ভুজ}}
 * Catalan: {{t|ca|quadrilàter|m}}
 * Chinese:
-*: Mandarin: {{t|cmn|四边形|tr=sìbiānxíng|sc=Hani}}
+*: Mandarin: {{t|cmn|四邊形|sc=Hani}}, {{t|cmn|四边形|tr=sìbiānxíng|sc=Hani}}
 * Czech: {{t-|cs|čtyřúhelník|m}}
 * Dutch: {{t+|nl|vierhoek}}
 * Esperanto: {{t-|eo|kvarlatero|xs=Esperanto}}
 * Finnish: {{t+|fi|nelikulmio}}
-* French: {{t+|fr|quadrilatère}}
+* French: {{t+|fr|quadrilatère}}, {{t+|fr|quadrangle|m}}
 * German: {{t+|de|Viereck}}
 * Greek: {{t+|el|τετράγωνο|tr=tetrágono|n}}
 * Hebrew: {{t|he|מרובע|m|tr=merubá}}
 {{trans-mid}}
 * Hindi: [[चतुर्भुज]]
+* Hungarian: {{t+|hu|négyszög}}
 * Icelandic: {{t|is|ferhliðungur|m}}, {{t|is|fjórhliðungur|m}}
-* Italian: {{t+|it|quadrilatero|m}}
-* Japanese: {{t-|ja|四辺形|tr=shihenkei}}, (in common, uses {{t-|ja|四角形|tr=shikakukei}})
+* Italian: {{t+|it|quadrilatero|m}}, {{t+|it|quadrangolo|m}}
+* Japanese: {{t|ja|四辺形|tr=しへんけい, shihenkei|sc=Jpan}}, {{t|ja|四角形|tr= しかっけい, shikakkei|sc=Jpan}}
 * Persian: {{t|fa|چهارضلعی|sc=fa-Arab}}, {{t|fa|چهارور |sc=fa-Arab}}
-* Polish: [[czworokąt]] {{m}}, [[czworobok]] {{m}}
-* Romanian: [[patrulater]], [[cadrilater]]
-* Russian: {{t+|ru|четырёхугольник|m|tr=četyrjoxugо́l'nik}}
+* Polish: {{t+|pl|czworokąt|m}}, {{t|pl|czworobok|m}}
+* Romanian: {{t+|ro|patrulater}}, {{t|ro|cadrilater}}
+* Russian: {{t+|ru|четырёхугольник|m|tr=četyrjoxugólʹnik}}
 * Spanish: {{t+|es|cuadrilátero|m}}
 * Swedish: {{t+|sv|fyrhörning|c}}
 * Telugu: [[చతుర్భుజి]] (chaturbhuji)
