--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -67,7 +67,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Danish: {{t+|da|kanin|c}}
 * Dena'ina: {{tø|tfn|hvaya}}
 * Dutch: {{t+|nl|konijn|n}}
-* Esperanto: {{t-|eo|kuniklo|xs=Esperanto}}
+* Esperanto: {{qualifier|♂♀}} {{t-|eo|kuniklo}}, {{qualifier|♂}} {{t-|eo|virkuniklo}}, {{qualifier|neologism ♂}} {{t-|eo|kunikliĉo}},{{qualifier|♀}} {{t-|eo|kuniklino}}, {{qualifier|♂♀ offspring}} {{t-|eo|kuniklido}}, {{qualifier|diminutive ♂♀}} {{t-|eo|kunikleto}}
 * Estonian: [[küülik]]
 * Ewe: [[fɔmizi]]
 * Faroese: {{t-|fo|kanin|xs=Faroese}}
@@ -86,6 +86,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Hopi: {{tø|hop|taavo}}
 * Hungarian: {{t+|hu|nyúl}}
 * Icelandic: {{t+|is|kanína}}
+* Ido: {{qualifier|♂♀}} {{t+|io|kuniklo}}, {{qualifier|♂}} {{t-|io|kuniklulo}}, {{qualifier|♀}} {{t-|io|kuniklino}}, {{qualifier|♂♀ offspring}} {{t-|io|kuniklyuno}}, {{qualifier|♂ offspring}} {{t-|io|kuniklyunulo}}, {{qualifier|♀ offspring}} {{t-|io|kuniklyunino}}, {{qualifier|diminutive ♂♀}} {{t+|io|kunikleto}}
 * Indonesian: {{t+|id|kelinci|xs=Indonesian}}
 * Interlingua: [[conilio]]
 * Irish: {{t+|ga|coinín|xs=Irish}}
@@ -158,7 +159,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Uzbek: {{t-|uz|quyon}}
 * Venetian: {{tø|vec|cunicio|m}}
 * Vietnamese: {{t+|vi|thỏ}}
-* Volapük: {{qualifier|♂♀}} {{t-|vo|krolig}}, {{qualifier|♂}} {{t-|vo|hikrolig}}, {{qualifier|♀}} {{t-|vo|jikrolig}}, {{qualifier|♂♀ offspring}} {{t-|vo|kroligül}}, {{qualifier|♂ offspring, young}} {{t-|vo|hikroligül}}, {{qualifier|♀ offspring, young}} {{t-|vo|jikroligül}}
+* Volapük: {{qualifier|♂♀}} {{t-|vo|krolig}}, {{qualifier|♂}} {{t-|vo|hikrolig}}, {{qualifier|♀}} {{t-|vo|jikrolig}}, {{qualifier|♂♀ offspring}} {{t-|vo|kroligül}}, {{qualifier|♂ offspring}} {{t-|vo|hikroligül}}, {{qualifier|♀ offspring}} {{t-|vo|jikroligül}}, {{qualifier|diminutive ♂♀}} {{t-|vo|kroligil}}, {{qualifier|diminutive ♂}} {{t-|vo|hikroligil}}, {{qualifier|diminutive ♀}} {{t-|vo|jikroligil}}
 * Welsh: [[cwningen]]
 * West Frisian: [[knyn]]
 * Wolof: {{t-|wo|njomboor|alt=njomboor ji}}
