t+yi:[[קיניגל]] t+yi:[[קראָליק]] t+de:[[Karnickel ]] ([[WT:EDIT|Assisted]]) <rabbit#18212141>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -77,7 +77,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Friulian: [[cunin]]
 * Galician: [[coello]]
 * Georgian: {{t-|ka|ბოცვერი|tr=botc'veri|sc=Geor|xs=Georgian}}
-* German: {{t+|de|Kaninchen|n}}
+* German: {{t+|de|Kaninchen|n}}, {{t|de|Karnickel |n}} {{qualifier|colloquial}}
 * Goguryeo: {{tø|zkg|烏斯含|tr=eosaham}}
 * Greek: {{t+|el|κουνέλι|n|tr=kounéli}}
 *: Ancient: {{tø|grc|κούνικλος|m|tr=kouniklos|sc=polytonic}}
@@ -164,6 +164,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Welsh: [[cwningen]]
 * West Frisian: [[knyn]]
 * Wolof: {{t-|wo|njomboor|alt=njomboor ji}}
+* Yiddish: {{t|yi|קיניגל|n|tr=kinigl|sc=Hebr}}, {{t|yi|קראָליק|m|tr=krolik|sc=Hebr}}
 {{trans-bottom}}
 
 {{trans-top|fur}}
