ditch pointless translations <retentiveness#18229371>

--- a/en/r/retentiveness.742266.wikitext
+++ b/en/r/retentiveness.742266.wikitext
@@ -1,10 +1,14 @@
 ==English==
+
 ===Noun===
 {{en-noun|-}}
+
 # The state of being [[retentive]].
 
 ====Translations====
-* [[putere]] [[de]] [[memorare]] {{f}}; [[putere]] [[de]] [[reţine|reținere]] {{f}}
+{{trans-top|state of being retentive}}
+{{trans-mid}}
+{{trans-bottom}}
 
 [[te:retentiveness]]
 [[vi:retentiveness]]
