--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -29,7 +29,7 @@ From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|an
 * Esperanto: {{t+|eo|veto}}
 * Finnish: {{t+|fi|veto}}
 * French: {{t+|fr|pari}}
-* {{trreq|Georgian}}
+* Georgian: {{t|ka|სანაძლეო|sc=Geor|tr=sanajleo}}, {{t|ka|ნაძლევი|sc=Geor|tr=najlevi}}
 * German: {{t+|de|Wette|f}}
 * Greek: {{t+|el|στοίχημα|n|tr=stoíchima}}
 * Greenlandic: {{t-|kl|eqquiniut|xs=Greenlandic}}
