--- a/en/l/land of opportunity.856422.wikitext
+++ b/en/l/land of opportunity.856422.wikitext
@@ -2,7 +2,8 @@
 
 ===Noun===
 {{head|en|noun}}
+
 # {{idiomatic}} A nickname for the [[United States]].
-: ''They say America is the '''land of opportunity'''. Opportunity for what? For children to run in the dirty streets?'' -Mr Mousekewitz in ''{{w|An American Tail: Fievel Goes West}}''
+#: ''They say America is the '''land of opportunity'''. Opportunity for what? For children to run in the dirty streets?'' - Mr Mousekewitz in ''{{w|An American Tail: Fievel Goes West}}''
 
 [[Category:en:United States of America]]
