--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -5,13 +5,13 @@
 {{en-proper noun}}
 
 # A language spoken mostly in the province of [[Friesland]], in the north of the Netherlands; West Lauwers Frisian, one of the three West Frisian languages (or language varieties).
-# {{context|Netherlands}} A [[dialect]] spoken in [[West Friesland]] in the province of [[North Holland]], historically related to the language spoken in [[Friesland]].
+# {{rfc-sense}} {{context|Netherlands}} A [[dialect]] spoken in [[West Friesland]] in the province of [[North Holland]], historically related to the language spoken in [[Friesland]].
 
 ===Adjective===
 {{en-adj|-}}
 
 # Of or pertaining to [[Friesland]].
-# {{context|Netherlands}} Of or pertaining to [[West Friesland]].
+# {{rfc-sense}} {{context|Netherlands}} Of or pertaining to [[West Friesland]].
 
 ====Usage notes====
 Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be varieties of a single language called “'''Frisian'''”.  Other linguists and the speakers consider them to be separate languages in a language group called “'''Frisian'''”.
