--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -14,7 +14,7 @@
 # {{rfc-sense}} {{context|Netherlands}} A [[dialect]] spoken in [[West Friesland]] in the province of [[North Holland]], historically related to the language spoken in [[Friesland]].
 
 ====Usage notes====
-Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be varieties of a single language called “'''Frisian'''”.  Other linguists and the speakers consider them to be separate languages in a language group called “'''Frisian'''”.
+* Frisian speakers consider Frisian to be a language group consisting of West Frisian, Saterland Frisian, and North Frisian;{{fact}} however, some linguists consider Frisian to be a single language, of which these are varieties.{{fact}}
 
 ====Translations====
 {{trans-top|language spoken in Friesland}}
