--- a/en/s/sawtooth.776083.wikitext
+++ b/en/s/sawtooth.776083.wikitext
@@ -13,10 +13,10 @@
 #{{context|mathematics|engineering}} Describing a function or [[waveform]] that consists of repeated triangular transitions when graphed.
 
 ===Noun===
-{{en-noun|pl=sawteeth}}
+{{en-noun|pl=sawteeth|pl2=sawtooths}}
 
-# A cutting [[bit]] of a [[saw]].
-# A function or waveform that consists of regular triangular transitions when graphed.
+# {{context|plural "sawteeth"}} A cutting [[bit]] of a [[saw]].
+# {{context|plural "sawtooths"}} A function or waveform that consists of regular triangular transitions when graphed.
 
 [[et:sawtooth]]
 [[nl:sawtooth]]
