--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -70,6 +70,7 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * Albanian: {{t-|sq|ishull|m|xs=Albanian}}, {{t-|sq|ujdhesë|f|xs=Albanian}}
 * Amharic: {{t|am|ደሴት|f|tr=däset|sc=Ethi}}
 * Anglo-Norman: {{tø|xno|isle|f}}
+* Antillean Creole: {{tø|gcf|zil}}
 * Arabic: {{t|ar|جزيرة|f|tr=jazīra|alt=جَزِيرَة|sc=Arab}}
 *: [[Egyptian Arabic]]: {{tø|arz| جزيرة|f|tr=gezīra|sc=Arab}}
 * Aragonese: {{t|an|isla|f}}
