--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -38,7 +38,7 @@ From {{etyl|LL.}} {{term|lang=la|theoria|theōria}}, from {{etyl|grc}} {{term|θ
 In scientific discourse, the sense “unproven conjecture” is discouraged (with {{term|hypothesis|lang=en}} or {{term|conjecture|lang=en}} preferred), due to unintentional ambiguity and intentional equivocation with the sense “well-developed statement or structure”.
 
 ====Synonyms====
-* See also [[Wikisaurus:supposition]]
+* scientific thory
 
 ====Holonyms====
 * {{sense|in logic}} [[formal system]]
