Reverted edits by [[Special:Contributions/67.197.168.126|67.197.168.126]], restoring last version by [[User:MaEr|MaEr]]. If you think this rollback is in error, please leave a message on my talkpage. <theory#18275051>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -1,4 +1,3 @@
-Scientific theory or theory it is the same thing. By the way who cares!!!
 ==English==
 
 ===Etymology===
@@ -39,7 +38,7 @@ From {{etyl|LL.}} {{term|lang=la|theoria|theōria}}, from {{etyl|grc}} {{term|θ
 In scientific discourse, the sense “unproven conjecture” is discouraged (with {{term|hypothesis|lang=en}} or {{term|conjecture|lang=en}} preferred), due to unintentional ambiguity and intentional equivocation with the sense “well-developed statement or structure”.
 
 ====Synonyms====
-* scientific thory
+* See also [[Wikisaurus:supposition]]
 
 ====Holonyms====
 * {{sense|in logic}} [[formal system]]
