/* Verb */ + quote 1599 Much Ado <blow#18281700>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -429,6 +429,9 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 {{en-verb|blows|blowing|'''[[blew]]'''|'''[[blown]]'''}}
 
 # To [[blossom]]; to cause to [[bloom]] or blossom.
+#* '''1599''', [[w:William Shakespeare|William Shakespeare]], ''[[w:Much Ado About Nothing|Much Ado About Nothing]]'', [[s:Much Ado About Nothing (Shakespeare)|Act 4 Scene 1]]
+#*:You seem to me as [[w:Diana (mythology)|Dian]] in her [[orb]],
+#*:As chaste as is the bud [[ere]] it be '''blown''';
 #*'''1667''', [[w:John Milton|John Milton]], Paradise Lost, [[s:Paradise Lost (1667)/Book V|Book 5]]
 #*: How '''blows''' the citron grove.
 
