--- a/en/n/nonathletic.776145.wikitext
+++ b/en/n/nonathletic.776145.wikitext
@@ -2,3 +2,4 @@
 ===Adjective===
 {{en-adj}}
 # Having no [[athletic]] ability (or interest), especially describing one whose interests are academic.
+not having any desire for sport related activities.
