# {{intransitive|obsolete}} To [[waste away]] slowly.  #* Shakespeare  #*: Therefore, let Renedick, like covered fire, / '''Consume''' away in sighs. <consume#18283375>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -20,6 +20,9 @@ From {{etyl|la}} ''[[consumere]]''.
 #: ''Desire '''consumed''' him.''
 # {{transitive}} To [[destroy]] completely.
 #: ''The building was '''consumed''' by fire.''
+# {{intransitive|obsolete}} To [[waste away]] slowly.
+#* Shakespeare
+#*: Therefore, let Renedick, like covered fire, / '''Consume''' away in sighs.
 
 ====Synonyms====
 * {{sense|use}} [[burn]] (''of energy''), [[use]], [[use up]]
