--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -22,7 +22,7 @@ From {{etyl|la}} ''[[consumere]]''.
 #: ''The building was '''consumed''' by fire.''
 # {{intransitive|obsolete}} To [[waste away]] slowly.
 #* Shakespeare
-#*: Therefore, let Renedick, like covered fire, / '''Consume''' away in sighs.
+#*: Therefore, let Benedick, like cover'd fire, / '''Consume''' away in sighs.
 
 ====Synonyms====
 * {{sense|use}} [[burn]] (''of energy''), [[use]], [[use up]]
