--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -44,6 +44,7 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 *: Mandarin: {{t+|cmn|松鼠|tr=sōngshǔ|sc=Hani}}, {{t+|cmn|灰鼠|tr=huīshǔ|sc=Hani}}, {{t+|cmn|栗鼠|tr=lìshǔ|sc=Hani}}
 * Chuvash: {{tø|cv|пакша|tr=pakşa|sc=Cyrl}}
 * Czech: {{t+|cs|veverka|f}}
+* Dalmatian: {{t|dlm|viala|f}}
 * Danish: {{t+|da|egern|n}}
 * Dolgan: {{tø|dlg|тииҥ|tr=tiiñ|sc=Cyrl}}
 * Dutch: {{t+|nl|eekhoorn|m}}
