--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -30,7 +30,7 @@
 * German: {{t+|de|Hintergedanke|m}}
 * Korean: {{t-|ko|배후목적|tr=Bae-hoo-mok-jeok|sc=Kore}}
 * Portuguese: {{t-|pt|segunda intenção|f}}
-* Serbian: {{t-|sr|скривени мотив|m|tr=skriveni motiv|sc=Cyrl}}
+* Serbo-Croatian: {{t|sh|скривени мотив|m|tr=skriveni motiv|sc=Cyrl}}
 * Spanish: {{t-|es|segunda intención|f}}
 {{trans-bottom}}
 
