--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -16,7 +16,7 @@
 ===Noun===
 {{en-noun}}
 
-# Any carnivorous mammal of the genus [[Martes]] in the family [[Mustelidae]].
+# Any carnivorous mammal of the genus ''[[Martes]]'' in the family ''[[Mustelidae]]''.
 
 ====Derived terms====
 {{rel-top|terms derived from ''marten''}}
@@ -33,60 +33,58 @@
 ====Translations====
 {{trans-top|mammal}}
 * Abkhaz: {{t-|ab|цыҕ|tr=cyġ|sc=Cyrl}}
-* Albanian: [[zardafi]]
+* Albanian: {{t|sq|zardafi}}
 * Algonquin: {{tø|alq|wàbicèsè}}
 * Armenian: {{t+|hy|կզաքիս|tr=kzak'is}}
-* Basque: [[lepahori]]
+* Basque: {{t|eu|lepahori}}
 * Belarusian: {{t-|be|куніца|f|tr=kunitsa|xs=Belarusian}}
-* Bosnian: {{t-|bs|kuna|f}}
-* Breton: [[mart]]
+* Breton: {{t|br|mart}}
 * Bulgarian: {{t-|bg|бялка|f|tr=bjalka}}
 * Catalan: {{t-|ca|marta|f}}
 * Chinese:
 *: Mandarin: {{t|zh|貂|tr=diāo|sc=Hani}}
-* Croatian: {{t+|hr|kuna|f}}
 * Czech: {{t+|cs|kuna|f}}
 * Danish: {{t-|da|mår}}
 * Dutch: {{t+|nl|marter|m}}
-* Esperanto: [[marteso]]
-* Estonian: [[nugis]]
+* Esperanto: {{t|eo|marteso}}
+* Estonian: {{t|et|nugis}}
 * Faroese: {{t-|fo|márur}}
 * Finnish: {{t+|fi|näätä}}
 * French: {{t+|fr|marte|f}}, {{t+|fr|martre|f}}
-* Friulian: [[mardar]], [[martar]]
-* Galician: [[marta]]
-* Georgian: {{t-|ka|კვერნა|tr=kverna|sc=Geor|xs=Georgian}}
+* Friulian: {{t|fur|mardar}}, {{t|fur|martar}}
+* Galician: {{t|gl|marta|f}}
+* Georgian: {{t-|ka|კვერნა|tr=kverna|sc=Geor}}
 * German: {{t+|de|Marder|m}}
-* Greek: [[δενδροκούναβο]] (dendrokúnavo)
+* Greek: {{t|el|δενδροκούναβο|tr=dendrokúnavo}}
 * Hungarian: {{t-|hu|nyuszt}}, {{t+|hu|nyest}}
 * Icelandic: {{t+|is|mörður}}
-* Irish: {{t+|ga|cat crainn|xs=Irish}}
+* Irish: {{t+|ga|cat crainn}}
 * Italian: {{t+|it|martora|f}}
 * Japanese: {{t+|ja|テン|tr=ten|sc=Jpan}}
 * Jèrriais: {{tø|roa-jer|martre|f}}
 {{trans-mid}}
 * Korean: {{t+|ko|담비|tr=dam bi|sc=Kore}}
-* Ladin: [[meder]]
+* Ladin: {{t|lld|meder}}
 * Latin: {{t-|la|martes|f}}
 * Latvian: {{t-|lv|cauna|xs=Latvian}}
 * Lithuanian: {{t+|lt|kiaunė|xs=Lithuanian}}
 * Lower Sorbian: {{tø|dsb|kuna|f|xs=Lower Sorbian}}
 * Macedonian: {{t-|mk|куна|f|tr=kuna}}
 * Norwegian: {{t-|no|mår}}
-* Occitan: [[marta]]
-* Ojibwe: [[waabizheshi]], [[waabizheshiwag]] {{p}}
-* Persian: {{fa-Arab|[[سمور]]}} (samur)
+* Occitan: {{t|oc|marta}}
+* Ojibwe: {{t|oj|waabizheshi}}, {{t|oj|waabizheshiwag|p}}
+* Persian: {{t|fa|سمور|tr=samur}}
 * Polish: {{t+|pl|kuna|f}}
 * Portuguese: {{t+|pt|marta}}
-* Romanian: [[jder]]
-* Romansch: [[fiergna]]
+* Romanian: {{t|ro|jder}}
+* Romansch: {{t|rom|fiergna}}
 * Russian: {{t+|ru|куница|f|tr=kuníca}}
 * Sami: [[neahti]]
-* Sardinian: [[schirri]], [[isbirru]], [[marta]], [[martzu]]
-* Scottish: [[taghan]]
-* Serbian:
-*: Cyrillic: {{t-|sr|куна|f|sc=Cyrl}}
-*: Roman: {{t-|sr|kuna|f}} {{t|sr|cibetka|f}}
+* Sardinian: {{t|sc|schirri}}, {{t|sc|isbirru}}, {{t|sc|marta}}, {{t|sc|martzu}}
+* Scottish Gaelic: {{t|gd|taghan}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|куна|f|sc=Cyrl}}
+*: Roman: {{t|sh|kuna|f}}, {{t|sh|cibetka|f}}
 * Slovak: {{t-|sk|kuna|f}}
 * Slovene: {{t+|sl|kuna|f}}
 * Spanish: {{t-|es|marta|f}}
@@ -95,7 +93,7 @@
 * Ukrainian: {{t-|uk|куниця|f|tr=kunytsja|xs=Ukrainian}}
 * Upper Sorbian: {{t-|hsb|kuna|f|xs=Upper Sorbian}}
 * Welsh: {{t-|cy|bele|xs=Welsh}}
-* West Frisian: [[marter]]
+* West Frisian: {{t|fy|marter}}
 {{trans-bottom}}
 
 ===See also===
