--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -8,7 +8,7 @@
 Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]], or perhaps called by an Algonquian name like the Abenaki ''[[moskwas]]'', with the spelling altered under the influence of the English words ''[[musk]]'' and ''[[rat]]''.
 
 ===Pronunciation===
-* {{IPA|/ˈmʌskræt/}}
+* {{IPA|/ˈmʌskræt/}}, {{X-SAMPA|/"mVskr{t/}}
 
 ===Noun===
 {{en-noun}}
@@ -30,13 +30,11 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 * Azeri: {{t-|az|ondatra}}
 * Basque: {{t-|eu|arratoi musketadun|xs=Basque}}
 * Belarusian: {{t-|be|андатра|f|xs=Belarusian}}
-* Bosnian: {{t-|bs|bizamski pacov|m}}
 * Breton: {{t+|br|razh-musk|xs=Breton}}
 * Bulgarian: {{t+|bg|мускус|tr=muskus}}
 * Cherokee: {{t-|chr|ᏎᎳᎩᏍᏆ|tr=selagisqua|sc=Cher|xs=Cherokee}}
 * Chinese:
 *: Mandarin: {{t|zh|麝鼠|tr=shèshǔ|sc=Hani}}
-* Croatian: {{t-|hr|mošusni štakor|mošusni}}, {{t-|hr|bizamski štakor}}
 * Czech: {{t-|cs|ondatra}}
 * Danish: {{t-|da|bisamrotte}}
 * Dutch: {{t+|nl|muskusrat|f}}
@@ -66,14 +64,14 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 * Navajo: {{tø|nv|tábąąh mąʼii}}
 * Norwegian: {{t-|no|bisamrotte}}
 * Polish: {{t+|pl|piżmak}}
-* Portuguese: {{t-|pt|rato almiscareiro}}
+* Portuguese: {{t-|pt|rato almiscareiro|m}}
 * Romanian: {{t-|ro|bizam}}
 * Romansch: {{t-|rm|undatra|xs=Romansch}}
 * Russian: {{t+|ru|ондатра|f|tr=ondátra}}
 * Sardinian: {{t-|sc|medrona muscada|xs=Sardinian}}, {{t-|sc|topi muscau|xs=Sardinian}}
-* Serbian:
-*: Cyrillic: {{t|sr|бизамски пацов|sc=Cyrl}}
-*: Roman: {{t|sr|bizamski pacov|sc=Latn}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|бизамски пацов|m|sc=Cyrl}}
+*: Roman: {{t|sh|bizamski pacov|m|sc=Latn}}, {{t|sh|mošusni štakor|m}} {{qualifier|Croatia}}, {{t|sh|bizamski štakor|m}} {{qualifier|Croatia}}
 * Slovak: {{t-|sk|ondatra pižmová}}
 * Slovene: {{t-|sl|pižmovka|f}}
 * Spanish: {{t-|es|rata almizclera}}
