--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -7,7 +7,7 @@ From {{etyl|enm}} {{term|pigge||pig, pigling|lang=enm}}, from {{etyl|ang}} {{rec
 British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victoria Fromkin, Robert Rodman, Nina M. Hyams, ''An Introduction to Language'', [http://books.google.com.au/books?id=7PftAAAAMAAJ&q=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&dq=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=6jLXT4-XMsHYigfxvJS4Aw&redir_esc=y page 474] — Similarly, the use of the word '''''pig''''' for “policeman” goes back at least as far as 1785, when a writer of the time called a Bow Street police officer a “China Street '''pig'''.”</ref>
 
 ====Pronunciation====
-* {{IPA|/pɪɡ/}}
+* {{IPA|/pɪɡ/}}, {{X-SAMPA|/pIg/}}
 * {{audio|en-us-pig.ogg|Audio (US)}}
 * {{rhymes|ɪɡ}}
 
@@ -28,7 +28,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 #: ''He was a '''pig''' and his apartment a pigpen; take-away containers and pizza boxes in a long, moldy stream lined his counter tops.''
 # {{context|now|_|chiefly|US|derogatory|slang}} A [[police officer]]. {{defdate|From ''ante'' 1785.}}
 #: ''The protester shouted, “Don't give in to the '''pigs'''!” as he was arrested.''
-#* '''1989''', [[w:Dan Simmons|Dan Simmons]], ''[[w:Carrion Comfort|Carrion Comfort]]'', [http://books.google.com.au/books?id=ClXFYXTcrXUC&pg=PA359&dq=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=6jLXT4-XMsHYigfxvJS4Aw&redir_esc=y#v=onepage&q=%22pig%22|%22pigs%22%20police%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false page 359],
+#* '''1989''', [[w:Dan Simmons|Dan Simmons]], ''{{w|Carrion Comfort}}'', [http://books.google.com.au/books?id=ClXFYXTcrXUC&pg=PA359&dq=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=6jLXT4-XMsHYigfxvJS4Aw&redir_esc=y#v=onepage&q=%22pig%22|%22pigs%22%20police%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false page 359],
 #*: “...Sounds too easy,” Marvin was saying. “What about the '''pigs'''?”
 #*: He meant police.
 #* '''1990''', Jay Robert Nash, ''Encyclopedia of World Crime: Volume 1: A-C'', [http://books.google.com.au/books?id=bCkRAQAAMAAJ&q=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&dq=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=2BLXT7CeHsaUiAfCo4WRAw&redir_esc=y page 198],
@@ -56,7 +56,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Albanian: {{t-|sq|derr|m|xs=Albanian}}, {{t-|sq|thi|m|xs=Albanian}}
 * Ama: {{tø|amm|fu}}
 * Amanab: {{tø|amn|tata}}
-* Amuzgo: [[kítzku]]
+* Amuzgo: {{t|amu|kítzku}}
 * Aneme Wake: {{tø|aby|boro}}
 * Anglo-Norman: {{tø|xno|porc|m}}, {{tø|xno|bacon|m}}
 * Apache:
@@ -64,24 +64,24 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Arabic: {{t-|ar|خنزير|m|tr=xanzīr|sc=Arab}}, {{t-|ar|حلوف|m|tr=ḥalūf|sc=Arab}}
 *: [[Moroccan Arabic]]: {{tø|ary|حلوف|tr=ḥalūf|sc=Arab}}
 * Aramaic:
-*: Syriac: [[ܚܙܝܪܐ]] (ħzīrā’) {{m}}, [[ܚܙܝܪܬܐ]] (ħzīrtā’) {{f}}
-*: Aramaic: [[חזירא]] (ħzīrā’) {{m}}, [[חזירתא]] (ħzīrtā’) {{f}}
+*: Syriac: {{t|arc|ܚܙܝܪܐ|tr=ħzīrā’|m}}, {{t|arc|ܚܙܝܪܬܐ|tr=ħzīrtā’|f}}
+*: Hebrew: {{t|arc|חזירא|tr=ħzīrā’|m}}, {{t|arc|חזירתא|tr=ħzīrtā’|f}}
 * Armenian: {{t-|hy|խոզ|tr=xoz}}
 * Aromanian: {{t-|rup|porcu|m}}
 * Asturian: {{t-|ast|gochu|m}}, {{t-|ast|gocha|f}}
 * Azeri: {{t+|az|donuz|xs=Azeri}}
-* Basque: [[urde]], [[zerri]], [[txerri]]
+* Basque: {{t|eu|urde}}, {{t|eu|zerri}}, {{t|eu|txerri}}
 * Belarusian: {{t-|be|свіння|f|tr=svinnjá}}
 * Bengali: {{t-|bn|শুওর|tr=shuor|sc=Beng}}
-* Breton: [[pemoc’h]] {{m}} [[moc'h]] {{p}}
+* Breton: {{t|br|pemoc'h|m}}
 * Bulgarian: {{t+|bg|свиня|f|tr=svinjá}}
 * Burmese: {{t+|my|ဝက်|tr=wé|sc=Mymr}}
 * Campidanese Sardinian: [[procu]] {{m}}, [[mannali]] {{m}}, [[sue]] {{f}}
 * Catalan: {{t+|ca|porc|m}}
-* Cebuano: [[baboy]]
+* Cebuano: {{t|ceb|baboy}}
 * Chamicuro: {{tø|ccc|kuuchi}}
 * Chamorro: [[babui]]
-* Cherokee: [[ᏏᏆ]] (siqua)
+* Cherokee: {{t|chr|ᏏᏆ|tr=siqua}}
 * Chinese:
 *: Mandarin: {{t|zh|豬|sc=Hani}}, {{t|zh|猪|tr=zhū|sc=Hani}}
 * Comox: {{tø|coo|kʷašu}}
@@ -90,7 +90,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Dalmatian: {{tø|dlm|puarc|m}}
 * Danish: {{t+|da|svin|n}}, {{t+|da|gris|c}}
 * Dutch: {{t+|nl|zwijn|n}}, {{t+|nl|varken|n}}
-* Erzya: [[туво]] (tuvo)
+* Erzya: {{t|myv|туво|tr=tuvo}}
 * Esperanto: {{t-|eo|porko|xs=Esperanto}}
 * Estonian: {{t-|et|siga}}, {{t-|et|põrsakest|p}}
 * Evenki: {{tø|evn|сунюрин|tr=suņurin}}
@@ -98,45 +98,45 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Finnish: {{t+|fi|sika}}
 * French: {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}, {{t+|fr|pourceau|m}}
 *: [[Old French]]: {{tø|fro|porc|m}}, {{tø|fro|bacon|m}}
-* Friulian: [[purcit]] {{m}}
-* Galician: [[porco#Galician|porco]] {{m}}
+* Friulian: {{t|fur|purcit|m}}
+* Galician: {{t|gl|porco|m}}
 * Georgian: {{t+|ka|ღორი|tr=ḡori|sc=Geor|xs=Georgian}}
 * German: {{t+|de|Schwein|n}}, {{qualifier|domestic}} {{t-|de|Hausschwein|n}}
 * Greek: {{t+|el|γουρούνι|n|tr=gouroúni}}, {{t+|el|χοίρος|m|tr=choíros}}
-* Hawaiian: {{unicode|[[puaʻa]]}}
+* Hawaiian: {{t|haw|puaʻa}}
 * Hebrew: {{t+|he|חזיר|m|tr=khazír|sc=Hebr}}, {{t-|he|חֲזִיר|m|tr=khazír|sc=Hebr}}
 * Hindi: {{t-|hi|सूअर|m|tr=sū'ar|sc=Deva}}
 * Hungarian: {{t+|hu|sertés}}, {{t+|hu|disznó}}, {{t+|hu|malac}}
 * Icelandic: {{t+|is|svín|n}}
-* Ido: [[porko]]
-* Ilocano: [[baboy]]
+* Ido: {{t|io|porko}}
+* Ilocano: {{t|ilo|baboy}}
 * Indonesian: {{t+|id|babi}}
 *: [[Acehnese]]: {{tø|ace|bui}}
 *: [[Buginese]]: bawi
 *: [[Kaili]]: vavu
 *: [[Mandar]]: boe
-* Interlingua: [[porco#Interlingua|porco]]
+* Interlingua: {{t|ia|porco}}
 * Irish: {{t+|ga|muc|f|xs=Irish}}
 * Italian: {{t+|it|maiale|m}}, {{t+|it|porco|m}}, {{t+|it|suino|m}}
 * Japanese: {{t+|ja|豚|tr=[[ぶた]], buta}}, {{t+|ja|ブタ|tr=buta|sc=Jpan}}
 * Kannada: {{t+|kn|ಹಂದಿ|tr=handi|sc=Knda}}
-* Karelian: [[počči]]
+* Karelian: {{t|krl|počči}}
 * Kazakh: {{t|kk|шошқа|tr=şoşqa|sc=Cyrl}}
 * Khmer: {{t+|km|ជ្រូក|tr=jruuk|sc=Khmr}}, {{t-|km|សត្វជ្រូក|tr=sat jruuk|sc=Khmr}}
 * Korean: {{t+|ko|돼지|tr=dwaeji|sc=Kore}}
 * Kumyk: {{tø|kum|донгуз|tr=doñuz|sc=Cyrl}}
 * Kurdish:
-*: Sorani: {{ku-Arab|[[به‌راز]]}} {{g|ku}}
+*: Sorani: {{t|ku|به‌راز}} {{g|ku}}
 * Kyrgyz: {{t-|ky|чочко|tr=çoçko|sc=Cyrl}}
 {{trans-mid}}
-* Ladin: [[porcel]]
+* Ladin: {{t|lld|porcel}}
 * Lao: {{t+|lo|ໝູ|tr=mŭː|sc=Laoo}}
 * Latgalian: {{tø|ltg|cyuka|f}}
-* Latin: [[sus]] {{c}}, [[porcus]] {{m}}<!--do not put the scientific name here-->
+* Latin: {{t|la|sus|c}}, {{t|la|porcus|m}}<!--do not put the scientific name here-->
 * Latvian: {{t+|lv|cūka|f|xs=Latvian}}
 * Lithuanian: {{t+|lt|kiaulė|f}}
-* Lower Sorbian: [[swinja]] {{f}}
-* Macedonian: [[свиња]] (svinja) {{f}}
+* Lower Sorbian: {{t|dsb|swinja|f}}
+* Macedonian: {{t|mk|свиња|tr=svinja|f}}
 * Malay: {{t+|ms|babi|xs=Malay}}, {{t+|ms|khinzir|xs=Malay}}
 * Malayalam: {{t+|ml|പന്നി|tr=panni|sc=Mlym}}
 * Maltese: {{t-|mt|ħanżir|m}}
@@ -154,7 +154,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Persian: {{t+|fa|خوک|tr=xuk|sc=fa-Arab}}
 * Polish: {{t+|pl|świnia|f}}
 * Portuguese: {{t+|pt|porco|m}}, {{t+|pt|suíno|m}}
-* Romani: [[balo]] {{m}}, [[bali]] {{f}}
+* Romani: {{t|rom|balo|m}}, {{t|rom|bali|f}}
 * Romanian: {{t+|ro|porc|m}}
 * Romansch: {{t-|rm|portg|m}}, {{t-|rm|piertg|m}}, {{t-|rm|püerch|m}}, {{t-|rm|chucal|m}}
 * Russian: {{t+|ru|свинья|f|tr=svinʹjá}}
@@ -162,40 +162,41 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Samoan: {{t-|sm|pua'a|xs=Samoan}}
 * Sanskrit: {{t-|sa|सूकरः|tr=sūkaraḥ|sc=Deva}}
 * Sardinian: {{t-|sc|porcu}}
-* Scottish Gaelic: [[muc]] {{f}}
+* Scottish Gaelic: {{t|gd|muc|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|свиња|f}}
 *: Roman: {{t-|sh|svinja|f}}
 * Sinhalese: {{t+|si|ඌරා|tr=ūrā|sc=Sinh}}
 * Slovak: {{t-|sk|prasa|n}}
 * Slovene: {{t+|sl|svinja|f}}, {{t+|sl|prašič|m}}, {{t-|sl|pujs|m}}
-* Spanish: {{t+|es|cerdo|m}}, [[chancho]] {{m}} {{qualifier|Argentina|Bolivia|Chile|Costa Rica|Ecuador|Honduras|Nicaragua|Paraguay|Peru|Uruguay}}, [[chon]] {{m}} {{qualifier|Northern Central Spain|specifically Cantabria}}, [[coche]] {{m}} {{qualifier|Guatemala}}, [[cochi]] {{m}} {{qualifier|Northwestern Mexico}}, [[cochín]] {{m}} {{qualifier|Northern Spain|specifically Aragon}}, [[cochino]] {{m}} {{qualifier|Mexico|Southwestern Spain and Canary Islands|standard usage in Venezuela}}, [[cocho]] {{m}} {{qualifier|Northern Spain|specifically Leon}}, [[cuchi]] {{m}} {{qualifier|Northern Central and Northwestern Argentina}}, [[cuto]] {{m}} {{qualifier|Northern Spain - specifically Aragon, La Rioja and Navarra}}, [[gocho]] {{m}} {{qualifier|Northern Spain|specifically Asturias and Leon}}, [[gorrino]] {{qualifier|Southern Central and Eastern Central Spain}}, [[guarro]] {{m}} {{qualifier|Western Spain|specifically Extremadura}}, [[marrano]] {{m}} {{qualifier|Central and Western Venezuela|Colombia}}, [[puerco]] {{m}} {{qualifier|Caribbean Islands|Costa Rica|Mexico|Panama}}, [[tocino]] {{m}} {{qualifier|Northern Spain|specifically Aragon}}, [[tunco]] {{m}} {{qualifier|El Salvador}}
+* Spanish: {{t+|es|cerdo|m}}, {{t|es|chancho|m}} {{qualifier|Argentina|Bolivia|Chile|Costa Rica|Ecuador|Honduras|Nicaragua|Paraguay|Peru|Uruguay}}, {{t|es|chon|m}} {{qualifier|Northern Central Spain|specifically Cantabria}}, {{t|es|coche|m}} {{qualifier|Guatemala}}, {{t|es|cochi|m}} {{qualifier|Northwestern Mexico}}, {{t|es|cochín|m}} {{qualifier|Northern Spain|specifically Aragon}}, {{t|es|cochino|m}} {{qualifier|Mexico|Southwestern Spain and Canary Islands|standard usage in Venezuela}}, {{t|es|cocho|m}} {{qualifier|Northern Spain|specifically Leon}}, {{t|es|cuchi|m}} {{qualifier|Northern Central and Northwestern Argentina}}, {{t|es|cuto|m}} {{qualifier|Northern Spain - specifically Aragon, La Rioja and Navarra}}, {{t|es|gocho|m}} {{qualifier|Northern Spain|specifically Asturias and Leon}}, {{t|es|gorrino}} {{qualifier|Southern Central and Eastern Central Spain}}, {{t|es|guarro|m}} {{qualifier|Western Spain|specifically Extremadura}}, {{t|es|marrano|m}} {{qualifier|Central and Western Venezuela|Colombia}}, {{t|es|puerco|m}} {{qualifier|Caribbean Islands|Costa Rica|Mexico|Panama}}, {{t|es|tocino|m}} {{qualifier|Northern Spain|specifically Aragon}}, {{t|es|tunco|m}} {{qualifier|El Salvador}}
 * Swahili: {{t+|sw|nguruwe|xs=Swahili}}, {{t+|sw|nguruwe|xs=Swahili}}
 * Swedish: {{t+|sv|gris|c}}, {{t+|sv|svin|n}}
-* Tagalog: [[baboy]]
+* Tagalog: {{t|tl|baboy}}
 * Tajik: {{t-|tg|хук|tr=xuk|sc=Cyrl}}
 * Tamil: {{t+|ta|பன்றி|tr=paṉṟi|sc=Taml}}
-* Taos: [[kùci’ína]]
+* Taos: {{t|twf|kùci’ína}}
 * Tatar: {{t+|tt|дуңгыз|tr=duñğız|sc=Cyrl}}, {{t+|tt|чучка|tr=çuçqa|sc=Cyrl}}
 * Telugu: {{t+|te|పంది|tr=pandi|sc=Telu}}
 * Thai: {{t-|th|หมู|tr=mŏo|sc=Thai}}
-* Tok Pisin: [[pik]]
+* Tok Pisin: {{t|tpi|pik}}
 * Tolai: {{tø|ksd|boroi}}
 * Tongan: {{t-|to|puaka|xs=Tongan}}
-* Tswana: {{t-|tn|kolobe|xs=Tswana}} (9/10)
+* Tswana: {{t-|tn|kolobe|c9|c10}}
 * Turkish: {{t+|tr|domuz}}, {{t+|tr|hınzır}}
 * Turkmen: {{t-|tk|doňuz}}
 * Ukrainian: {{t-|uk|свиня|f|tr=svynjá|xs=Ukrainian}}
-* Upper Sorbian: [[swinjo]] {{n}}
+* Upper Sorbian: {{t|hsb|swinjo|n}}
 * Urdu: {{t-|ur|خوک|tr=xūk|sc=ur-Arab}}, {{t-|ur|خنزیر|tr=xanzīr|sc=ur-Arab}}, {{t-|ur|سور|m|tr=sū'ar|sc=ur-Arab}}
 * Uyghur: {{t-|ug|چوشقا|sc=ug-Arab}}
 * Uzbek: {{t-|uz|choʻchka}}
-* Veps: [[siga#Veps|siga]]
+* Veps: {{t|vep|siga}}
 * Vietnamese: {{t-|vi|chi lợn}}
 * Volapük: {{qualifier|male or female}} {{t+|vo|svin}}, {{qualifier|male}} {{t+|vo|hisvin}}, {{qualifier|female}} {{t+|vo|jisvin}}, {{qualifier|male, obsolete}} {{t-|vo|omsvin}}, {{qualifier|domestic}} {{t-|vo|domasvin}}
 * Welsh: {{t+|cy|mochyn|m|xs=Welsh}}
-* West Frisian: [[baarch]] {{c}}
+* West Frisian: {{t|fy|baarch|c}}
 * Wolof: {{t-|wo|mbam-xuux|alt=mbam-xuux mi}}
+* {{trreq|zu}}
 {{trans-bottom}}
 
 {{trans-see|piglet}}
@@ -203,7 +204,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 {{trans-see|pork}}
 
 {{trans-top|someone who overeats or eats rapidly}}
-* Afrikaans: [[vark]]
+* Afrikaans: {{t|af|vark}}
 * Armenian: {{t-|hy|խոզ|tr=xoz}}, {{t-|hy|կաշալոտ|tr=kašalot}}
 * Catalan: {{t-|ca|golafre|m}}
 * Dutch: {{t+|nl|varken|n}}, {{t+|nl|zwijn|n}}, {{t-|nl|slokop|m|f}}
@@ -223,9 +224,8 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 {{trans-bottom}}
 
 {{trans-top|nasty or disgusting person}}
-* Afrikaans: [[vark]]
+* Afrikaans: {{t|af|vark}}
 * Armenian: {{t-|hy|խոզ|tr=xoz}}
-* Bosnian: {{t-|bs|svinja|f}}
 * Czech: {{t+|cs|prase|n}}
 * Dutch: {{t+|nl|zwijn|n}}, {{t+|nl|smeerlap|m}}
 * Finnish: {{t+|fi|sika}}
@@ -238,19 +238,18 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Latvian: {{t+|lv|cūka|f|xs=Latvian}}
 * Macedonian: {{t-|mk|свиња|f|tr=svínja}}
 * Russian: {{t+|ru|свинья|tr=svin’já|f}}
-* Serbian:
-*: Cyrillic: [[свиња#Serbian|свиња]] {{f}}
-*: Roman: [[svinja#Serbian|svinja]] {{f}}
-* Slovene: [[svinja]] {{f}}, [[prasec]] {{m}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|свиња|f}}
+*: Roman: {{t|sh|svinja|f}}
+* Slovene: {{t|sl|svinja|f}}, {{t|sl|prasec|m}}
 * Swahili: {{t+|sw|nguruwe|xs=Swahili}}
 * Turkish: {{t+|tr|tiksindirici}}
 * Welsh: {{t+|cy|mochyn|m|xs=Welsh}}
 {{trans-bottom}}
 
 {{trans-top|dirty or slovenly person}}
-* Afrikaans: [[vark]]
+* Afrikaans: {{t|af|vark}}
 * Armenian: {{t-|hy|խոզ|tr=xoz}}
-* Bosnian: {{t-|bs|svinja|f}}
 * Czech: {{t+|cs|prase|n}}, {{t-|cs|čuně|n}}
 * Dutch: {{t+|nl|varken|n}}
 * Finnish: {{t+|fi|sika}}, {{t+|fi|sottapytty}}
@@ -262,9 +261,9 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Latvian: {{t+|lv|cūka|f|xs=Latvian}}
 * Macedonian: {{t-|mk|свиња|f|tr=svínja}}
 * Russian: {{t+|ru|свинья|tr=svin’já|f}}, {{t+|ru|свинтус|tr=svíntus|m}}
-* Serbian:
-*: Cyrillic: [[свиња#Serbian|свиња]] {{f}}
-*: Roman: [[svinja#Serbian|svinja]] {{f}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|свиња|f}}
+*: Roman: {{t|sh|svinja|f}}
 * Slovene: {{t+|sl|prašič|m}}
 * Swahili: {{t+|sw|nguruwe|xs=Swahili}}
 * Turkish: {{t+|tr|pasaklı}}
@@ -275,14 +274,14 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Basque: {{t+|eu|txakur|xs=Basque}}
 * Czech: {{t-|cs|fízl|m}}
 * Dutch: {{t+|nl|flik|m}}
-* French: [[flic]] {{m}}, [[keuf]] {{m}} {{qualifier|verlan}}
+* French: {{t|fr|flic|m}}, {{t|fr|keuf|m}} {{qualifier|verlan}}
 * German: {{t+|de|Bulle|m}}
 * Greek: {{t+|el|γουρούνι|n|tr=gouroúni}}
 {{trans-mid}}
 * Icelandic: {{t-|is|löggusvín|n}}
 * Norwegian: {{t+|no|purk|m}}, {{t+|no|snut|m}}
 * Polish: {{t+|pl|pies|m}}
-* Spanish: [[milico]] {{m}} {{qualifier|Andes|River Plate region}}
+* Spanish: {{t|es|milico|m}} {{qualifier|Andes|River Plate region}}
 * Swahili: {{t+|sw|nguruwe|xs=Swahili}}
 {{trans-bottom}}
 
