--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -50,6 +50,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Chinese:
 *: Mandarin: {{t|zh|當時|sc=Hani}}, {{t|zh|当时|tr=dāngshí|sc=Hani}}, {{t|zh|那時|sc=Hani}}, {{t|zh|那时|tr=nà shí|sc=Hani}}
 * Czech: {{t+|cs|tehdy}}
+* Dalmatian: {{t|dlm|diatremun}}
 * Dutch: {{t+|nl|toen}}
 * Esperanto: {{t-|eo|tiam|xs=Esperanto}}
 * Finnish: {{t+|fi|silloin}}
