--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -21,7 +21,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|þing|lang=ang||tr=thing}}, from {{p
 # {{in the plural}} [[clothes]], [[possessions]] or [[equipment]].
 # {{informal}} A unit or container, usually containing edible goods.
 #: ''Get me a '''thing''' of apple juice at the store.''
-#: ''I just ate a whole '''thing''' of jelly beans.''
+#: ''I just ate a whole '''thing''' of candy beans.''
 # {{informal}} A [[problem]], [[dilemma]], or [[complicating]] [[factor]].
 #: ''The car looks cheap, but the '''thing''' is, I have doubts about its safety.''
 # {{slang}} A [[penis]].
