/* Turkish */ template update <bent#18308207>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -156,14 +156,12 @@ See also verb form {{term|bennen|lang=nl}}.
 ==Turkish==
 
 ===Etymology===
-From Persian {{fa-Arab|[[بند]]}} (''band'').
+From {{etyl|fa|tr}} {{fa-Arab|[[بند]]}} (''band'').
 
 ===Noun===
-'''bent'''
+{{tr-noun}}
 
 # [[dam]]
-
-[[Category:Turkish nouns]]
 
 [[ar:bent]]
 [[br:bent]]
