/* See also */ microspecies <species#18309440>

--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -68,6 +68,7 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 {{mid3}}
 * [[variety]]
 * [[binomial nomenclature]]
+* [[microspecies]]
 {{bottom}}
 
 ====Translations====
