--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -48,7 +48,7 @@ From {{etyl|enm}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from {{
 {{trans-top|to turn one's consideration to, deal with}}
 * Bulgarian: {{t-|bg|обръщам внимание}},  {{t-|bg|грижа се}},  {{t+|bg|прислужвам}}
 * Finnish: {{t+|fi|huolehtia}}, {{t+|fi|pitää}} {{t+|fi|huoli|alt=huolta}},  {{t+|fi|hoitaa}} ([[tehtävä]]/[[asia]]/[[juttu]]/[[homma]])
-* French: {{t|fr|assister à}}
+* French: {{t|fr|assister}}
 * German: {{t+|de|kümmern}}, {{t+|de|beachten}}
 {{trans-mid}}
 * Lojban: {{t-|jbo|jundi}}
