/* Translations */Serbian →‎ Serbo-Croatian using [[Project:AWB|AWB]] <public school#18319158>

--- a/en/p/public school.34050.wikitext
+++ b/en/p/public school.34050.wikitext
@@ -45,7 +45,7 @@ From {{term|public|lang=en}} (in the English sense, "open to all members of a co
 *: Nynorsk: {{t-|nn|privatskule|m}}
 {{trans-mid}}
 * Portuguese: {{t-|pt|escola particular}}
-* Serbian: {{t|sr|приватна школа|f|tr=privatna škola|sc=Cyrl}}
+* Serbo-Croatian: {{t|sh|приватна школа|f|tr=privatna škola|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|publicly administered school}}
