/* Translations */ <West Frisian#18324876>

--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -31,7 +31,7 @@
 * Italian: lingua frisone occidentale, lingua frisona occidentale (ad hoc)
 * Japanese: {{t+|ja|フリジア語|tr=Furijia-go}}, {{t-|ja|フリース語|tr=Furīsu-go}}
 * Limburgish: {{t+|li|Wèsfriesj|n}}
-* Polish: {{t-|pl|zachodniofryzyjski|m}}
+* Polish: (język) {{t-|pl|zachodniofryzyjski|m}}
 * Portuguese: {{t+|pt|frísio|m}},  {{t+|pt|frisão|m}}
 * Russian: {{t|ru|западнофризский|m|tr=zapadnofrízskij|sc=Cyrl}} {{qualifier|язы́к}}, {{t|ru|фризский|m|tr=frízskij|sc=Cyrl}} {{qualifier|язы́к}}
 * Spanish: {{t-|es|frisio occidental|m}}
