--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -40,12 +40,12 @@
 * Esperanto: {{t-|eo|adapto|xs=Esperanto}}, {{t|eo|akomodo|xs=Esperanto}}, {{t|eo|alĝustigo|xs=Esperanto}}, {{t|eo|ĝustigo|xs=Esperanto}}
 * Finnish: {{t-|fi|säätö}}, {{t-|fi|hienosäätö}}
 * French: {{t|fr|ajustement|m}}, {{t|fr|arèglement|m}}
-* German: {{t+|de|Anpassung|f}}
+* German: {{t+|de|Anpassung|f}}, {{t|de|Regulierung|f}}
 * Greek: [[διευθέτηση]] (diefθétisi) {{f}}, [[ρύθμιση]] (ríiθmisi) {{f}}, [[προσαρμογή]] (prosarmogí) {{f}}, [[διαβάθμηση]] (diaváθmisi) {{f}}
 * {{trreq|gn}}
 * Hebrew: {{t+|he|כוון|m|alt=כִּוּוּן}}
-* Hungarian: {{t|hu|beállítás}}
 {{trans-mid}}
+* Hungarian: {{t|hu|beállítás}}
 * Interlingua: [[adjustamento]]
 * Italian: {{t+|it|adattamento|m}}, {{t+|it|inserimento|m}}
 * Japanese: {{t|ja|調整|tr=ちょうせい, chōsei|sc=Jpan}}, {{t|ja|調節|tr=ちょうせつ, chōsetsu|sc=Jpan}}
