--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -14,8 +14,7 @@
 
 # A [[strait]] that passes through [[Istanbul]] from the [[Black Sea]] to the [[Sea of Marmara]], forming part of the traditional boundary between [[Europe]] and [[Asia]].
 
-====Translations====
-{{rfc-tsort|duplicate language: Serbo-Croatian}}
+===Translations===
 {{trans-top|A strait that passes through Istanbul}}
 * Afrikaans: {{t-|af|Bosporus}}, {{t-|af|Istanboel-straat}}
 * Arabic: {{t-|ar|مضيق بوسفور|m|tr=maDiiq búsfur|sc=Arab}}, {{t-|ar|البوسفور|m|tr=al-búsfur|sc=Arab}}
@@ -72,8 +71,7 @@
 * Portuguese: {{t-|pt|Bósforo|m}}
 * Romanian: [[Bosfor]]
 * Russian: {{t-|ru|Босфор|m|tr=Bosfór|sc=Cyrl}}
-* Serbo-Croatian: [[Босфор]] ([[Bosfor]]) {{m}}
-* Serbo-Croatian: {{t-|sh|Bosfor|m}}, {{t-|sh|Босфор|m}}
+* Serbo-Croatian: [[Босфор]] ([[Bosfor]]) {{m}}, {{t-|sh|Bosfor|m}}, {{t-|sh|Босфор|m}}
 * Sicilian: {{t-|scn|Bosfuru}}
 * Slovene: {{t+|sl|Bospor|m}}
 * Spanish: {{t-|es|Bósforo|m}}
