/* English */ expand <blankie#18338325>

--- a/en/b/blankie.856215.wikitext
+++ b/en/b/blankie.856215.wikitext
@@ -1,5 +1,14 @@
 ==English==
 
+===Alternative forms===
+* [[blanky]]
+
+===Etymology===
+From {{suffix|blanket|ie}}
+
+===Pronunciation===
+* {{IPA|/ˈblæŋki/}}
+
 ===Noun===
 {{en-noun}}
 
