--- a/en/t/terrestrial planet.854976.wikitext
+++ b/en/t/terrestrial planet.854976.wikitext
@@ -32,9 +32,14 @@
 
 ====Translations====
 {{trans-top|Any planet of the solar system or any exoplanet which is Earth-like}}
+* Chinese:
+*: Mandarin: {{t|cmn|類地行星|sc=Hani}}, {{t|cmn|类地行星|tr=lèidì xíngxīng|sc=Hani}}
 * Dutch: {{t|nl|aardse planeet|f}}
-* German: {{t|de|erdähnlicher Planet|m}}
+* {{trreq|Finnish}}
+* French: {{t|fr|planète tellurique|f}}
 {{trans-mid}}
+* German: {{t|de|erdähnlicher Planet|m}}
+* Japanese: {{t|ja|地球型惑星|tr=ちきゅうがたわくせい, chikyūgata wakusei|sc=Jpan}}
 * Romanian: [[terestru|terestrială]] [[planetă]] {{f}}
 * Russian: {{t|ru|планета земного типа|f|tr=planéta zemnóvo típa|sc=Cyrl}}
 {{trans-bottom}}
