--- a/en/t/terrestrial planet.854976.wikitext
+++ b/en/t/terrestrial planet.854976.wikitext
@@ -35,7 +35,7 @@
 * Chinese:
 *: Mandarin: {{t|cmn|類地行星|sc=Hani}}, {{t|cmn|类地行星|tr=lèidì xíngxīng|sc=Hani}}
 * Dutch: {{t|nl|aardse planeet|f}}
-* {{trreq|Finnish}}
+* Finnish: [[maankaltainen]] {{t|fi|planeetta}}
 * French: {{t|fr|planète tellurique|f}}
 {{trans-mid}}
 * German: {{t|de|erdähnlicher Planet|m}}
