--- a/en/c/Camelus dromedarius.34060.wikitext
+++ b/en/c/Camelus dromedarius.34060.wikitext
@@ -1,14 +1,10 @@
 ==Translingual==
-
+{{rfimage}}
+{{wikipedia}}
+{{wikispecies}}
 ===Proper noun===
 {{head|mul|proper noun|head=[[Camelus]] [[dromedarius]]}}
 
-# Scientific name for the [[dromedary]], a [[camel]].
-# A large even-toed ungulate native to northern Africa and western Asia, and the best-known member of the camel family.
-
-===External links===
-* [[w:dromedary|Wikipedia article on Camelus Dromedarius]]
-
-[[Category:mul:Taxonomic names]]
+# {{taxon|species|genus|Camelus|the [[dromedary]], a [[camel]] native to northern Africa and western Asia, the best-known member of the camel family}}
 
 [[hu:Camelus dromedarius]]
