--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -27,11 +27,14 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 {{trans-top|rodent}}
 * Algonquin: {{tø|alq|wajack}}
 * Arabic: {{t-|ar|فأر المسك|m|sc=Arab}}
+* {{trreq|an}}
+* {{trreq|ast}}
 * Azeri: {{t-|az|ondatra}}
 * Basque: {{t-|eu|arratoi musketadun|xs=Basque}}
 * Belarusian: {{t-|be|андатра|f|xs=Belarusian}}
 * Breton: {{t+|br|razh-musk|xs=Breton}}
 * Bulgarian: {{t+|bg|мускус|tr=muskus}}
+* {{trreq|ca}}
 * Cherokee: {{t-|chr|ᏎᎳᎩᏍᏆ|tr=selagisqua|sc=Cher|xs=Cherokee}}
 * Chinese:
 *: Mandarin: {{t|zh|麝鼠|tr=shèshǔ|sc=Hani}}
@@ -47,12 +50,16 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 * Galician: {{t-|gl|aguaneira|xs=Galician}}
 * German: {{t+|de|Bisamratte|f}}
 * Greek: {{t-|el|μοσχοπόντικας}}
+* {{trreq|gu}}
 * Hungarian: {{t+|hu|pézsma}}
 * Icelandic: {{t-|is|moskusrotta}}, {{t-|is|bísamrotta}}
+* {{trreq|io}}
+* {{trreq|ia}}
+* {{trreq|ie}}
 * Irish: {{t-|ga|muscfhrancach|xs=Irish}}
 * Italian: {{t-|it|topo muschiato|m}}
 * Japanese: {{t-|ja|マスクラット|tr=masukuratto|sc=Jpan}}
-* Kannada: {{t+|kn|ಸುಂಡಿಲಿ|sc=Knda|xs=Kannada}}
+* Kannada: {{t+|kn|ಸುಂಡಿಲಿ|tr=ārṭili|sc=Knda|xs=Kannada}}
 * Korean: {{t-|ko|사향쥐|tr=sahyangjwi|sc=Hang}}
 {{trans-mid}}
 * Latvian: {{t-|lv|ondatra|xs=Latvian}}
@@ -63,6 +70,8 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 * Maltese: {{t-|mt|far tal-misk ta’ l-ilma|xs=Maltese}}
 * Navajo: {{tø|nv|tábąąh mąʼii}}
 * Norwegian: {{t-|no|bisamrotte}}
+* {{trreq|ps}}
+* {{trreq|fa}}
 * Polish: {{t+|pl|piżmak}}
 * Portuguese: {{t-|pt|rato almiscareiro|m}}
 * Romanian: {{t-|ro|bizam}}
@@ -72,8 +81,10 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|бизамски пацов|m|sc=Cyrl}}
 *: Roman: {{t|sh|bizamski pacov|m|sc=Latn}}, {{t|sh|mošusni štakor|m}} {{qualifier|Croatia}}, {{t|sh|bizamski štakor|m}} {{qualifier|Croatia}}
+* {{trreq|sd}}
 * Slovak: {{t-|sk|ondatra pižmová}}
 * Slovene: {{t-|sl|pižmovka|f}}
+* {{trreq|so}}
 * Spanish: {{t-|es|rata almizclera}}
 * Swedish: {{t-|sv|bisam|c}}
 * Turkish: {{t-|tr|misk sıçanı}}
@@ -82,6 +93,9 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 * Upper Sorbian: {{t-|hsb|pižmo|xs=Upper Sorbian}}, {{t-|hsb|pižmowa šćura|xs=Upper Sorbian}}, {{t-|hsb|bizamowa myš|xs=Upper Sorbian}}
 * Welsh: {{t-|cy|mwsglygoden|xs=Welsh}}, {{t-|cy|llygoden fwsg|xs=Welsh}}
 * West Frisian: {{t-|fy|muskusrôt|xs=West Frisian}}
+* {{trreq|xh}}
+* {{trreq|yi}}
+* {{trreq|zu}}
 {{trans-bottom}}
 
 [[Category:English terms derived from Algonquian languages]]
