--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -59,7 +59,7 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 * Irish: {{t-|ga|muscfhrancach|xs=Irish}}
 * Italian: {{t-|it|topo muschiato|m}}
 * Japanese: {{t-|ja|マスクラット|tr=masukuratto|sc=Jpan}}
-* Kannada: {{t+|kn|ಸುಂಡಿಲಿ|tr=ārṭili|sc=Knda|xs=Kannada}}
+* Kannada: {{t+|kn|ಸುಂಡಿಲಿ|tr=ārṭili|sc=Knda|xs=Kannada}}, {{t|kn|ಸುಂಡಿಲಿ|tr=sunḍili|sc=Knda}}
 * Korean: {{t-|ko|사향쥐|tr=sahyangjwi|sc=Hang}}
 {{trans-mid}}
 * Latvian: {{t-|lv|ondatra|xs=Latvian}}
