--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -87,7 +87,7 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 * {{trreq|so}}
 * Spanish: {{t-|es|rata almizclera}}
 * Swedish: {{t-|sv|bisam|c}}
-* {{trreq|te}}
+* Telugu: {{t|te|కంపెలుక|sc=Telu}}
 * Turkish: {{t-|tr|misk sıçanı}}
 * Udmurt: {{tø|udm|вукомак|tr=vukomak}}
 * Ukrainian: {{t-|uk|ондатра|f|tr=ondatra|xs=Ukrainian}}
