t+ba:[[ондатра]] ([[WT:EDIT|Assisted]]) <muskrat#18375719>

--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -30,6 +30,7 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 * {{trreq|an}}
 * {{trreq|ast}}
 * Azeri: {{t-|az|ondatra}}
+* Bashkir: {{tø|ba|ондатра|tr=ondatra|sc=Cyrl}}
 * Basque: {{t-|eu|arratoi musketadun|xs=Basque}}
 * Belarusian: {{t-|be|андатра|f|xs=Belarusian}}
 * Breton: {{t+|br|razh-musk|xs=Breton}}
