--- a/en/d/duvel.741377.wikitext
+++ b/en/d/duvel.741377.wikitext
@@ -4,12 +4,15 @@
 alteration of [[duivel]] 'devil'
 
 ===Noun===
-{{nl-noun|g}}
+{{nl-noun|m|duvels|duveltje}}
 
 # [[devil]]
 # [[body]], especially in ''op z'n duvel'' 'a beating'
 # [[impish]] child, [[rascal]]
 # (capitalized, legally a trade mark) an atypical, 'develish' strong blond Flemish [[beer]]
+
+
+* 'Duveltje uit een doosje': [[jack-in-the-box]]
 
 ===References===
 * {{R:Koenen}}
