--- a/en/d/duvel.741377.wikitext
+++ b/en/d/duvel.741377.wikitext
@@ -1,7 +1,7 @@
 ==Dutch==
 
 ===Etymology===
-alteration of [[duivel]] 'devil'
+Dialectal form of {{term|duivel|lang=nl}}
 
 ===Noun===
 {{nl-noun|m|duvels|duveltje}}
@@ -10,9 +10,6 @@ alteration of [[duivel]] 'devil'
 # [[body]], especially in ''op z'n duvel'' 'a beating'
 # [[impish]] child, [[rascal]]
 # (capitalized, legally a trade mark) an atypical, 'develish' strong blond Flemish [[beer]]
-
-
-* 'Duveltje uit een doosje': [[jack-in-the-box]]
 
 ===References===
 * {{R:Koenen}}
